Tilføjede flere opgaver med De Moivres formel

--- a/complexnumbers/11demoivrestheorem.tex
+++ b/complexnumbers/11demoivrestheorem.tex
@@ -350,4 +350,370 @@ Find en fjerde løsning ($p=3$). Bemærk at dette er den sidste løsning, idet d
 	
 \end{exercise}
 
+\newpage
+
+\begin{exercise}{De Moivres formel 1-6}
+	
+	Find alle løsninger til $z^4=-1-i$. \\
+	Arranger dem efter stigende argumenter.
+	
+	$z_1$ = \answerbox{2^{\frac{1}{8}} \cdot e^{i \frac{5\pi}{16}}}		$z_2$ = \answerbox{2^{\frac{1}{8}} \cdot e^{i \frac{13\pi}{16}}}		$z_3$ = \answerbox{2^{\frac{1}{8}} \cdot e^{i \frac{21\pi}{16}}}		$z_4$ = \answerbox{2^{\frac{1}{8}} \cdot e^{i \frac{29\pi}{16}}}
+	
+	
+	\hint 
+	
+	Indtegn det komplekse tal i et argand diagram. 
+	
+	\hint 
+	
+	Ud fra argand diagrammet kan højresiden skrives på polær form
+	\[
+	z^4 = \sqrt{(-1)^2+(-1)^2} \cdot e^{i \frac{5 \pi}{4}} = 2^{\frac{1}{2}} \cdot e^{i \frac{5 \pi}{4}} 
+	\]
+	
+	
+	\hint
+	
+	Skriv $z$ på polær form $z = r_z \cdot e^{i \theta_z}$
+	\[
+	\left(r_z \cdot e^{i \theta_z}\right)^4 = r_z^4 \cdot e^{i \theta_z \cdot 4} = 2^{\frac{1}{2}} \cdot e^{i \frac{5 \pi}{4}} 
+	\]
+	
+	\hint 
+	Match modulus og fase
+	
+	\[
+	r_z^4 = 2^{\frac{1}{2}} \qquad \wedge \qquad e^{i \theta_z \cdot 4} = e^{i \frac{5 \pi}{4}} 
+	\]
+	
+	\hint
+	
+	Bestem modulus
+	\[
+	r_z  =  \left(2^{\frac{1}{2}} \right)^{\frac{1}{4}} = 2^{\frac{1}{8}}
+	\]
+	
+	\hint
+	
+	Bestem argumentet
+	
+	\[
+	\theta_z \cdot 4 = \frac{5 \pi}{4} \qquad \Rightarrow \qquad  \theta_z = \frac{5\pi}{16}
+	\]
+	
+	\hint
+	
+	Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
+	
+	\hint
+	
+	Find en anden løsning ($p=1$)
+	\[
+	\theta_z \cdot 4 = \frac{5\pi}{4}  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_z = \frac{13 \pi}{16}
+	\]
+	
+	\hint
+	
+	Find en tredje løsning ($p=2$)
+	\[
+	\theta_z \cdot 4 =  \frac{5\pi}{4}  + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_z = \frac{21 \pi}{16}
+	\]
+	
+	\hint
+	
+	Find en fjerde løsning ($p=3$). Bemærk at dette er den sidste løsning, idet de efterfølgende løsninger blot vil være gentagelser af de fire første. 
+	\[
+	\theta_z \cdot 4 = \frac{5\pi}{4} + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_z = \frac{29 \pi}{16}
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{De Moivres formel 1-7}
+	
+	Find alle løsninger til $z^2=-2+2i$. \\
+	Arranger dem efter stigende argumenter.
+	
+	$z_1$ = \answerbox{8^{\frac{1}{4}} \cdot e^{i \frac{3\pi}{8}}}		$z_2$ = \answerbox{8^{\frac{1}{4}} \cdot e^{i \frac{11\pi}{8}}}	
+	
+	\hint 
+	
+	Indtegn det komplekse tal i et argand diagram. 
+	
+	\hint 
+	
+	Ud fra argand diagrammet kan højresiden skrives på polær form
+	\[
+	z^2 = \sqrt{(-2)^2+2^2} \cdot e^{i \frac{3 \pi}{4}} = 8^{\frac{1}{2}} \cdot e^{i \frac{3 \pi}{4}} 
+	\]
+	
+	
+	\hint
+	
+	Skriv $z$ på polær form $z = r_z \cdot e^{i \theta_z}$
+	\[
+	\left(r_z \cdot e^{i \theta_z}\right)^2 = r_z^2 \cdot e^{i \theta_z \cdot 2} = 8^{\frac{1}{2}} \cdot e^{i \frac{3 \pi}{4}} 
+	\]
+	
+	\hint 
+	Match modulus og fase
+	
+	\[
+	r_z^2 = 8^{\frac{1}{2}}  \qquad \wedge \qquad e^{i \theta_z \cdot 2} = e^{i \frac{3 \pi}{4}} 
+	\]
+	
+	\hint
+	
+	Bestem modulus
+	\[
+	r_z  =  \left(8^{\frac{1}{2}} \right)^{\frac{1}{2}} = 8^{\frac{1}{4}}
+	\]
+	
+	\hint
+	
+	Bestem argumentet
+	
+	\[
+	\theta_z \cdot 2 = \frac{3 \pi}{4} \qquad \Rightarrow \qquad  \theta_z = \frac{3\pi}{8}
+	\]
+	
+	\hint
+	
+	Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
+	
+	\hint
+	
+	Find en anden løsning ($p=1$). Bemærk at dette er den sidste løsning, idet de efterfølgende løsninger blot vil være gentagelser af de forrige. 
+	\[
+	\theta_z \cdot 2 = \frac{3 \pi}{4}  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_z = \frac{11 \pi}{8}
+	\]
+	
+
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{De Moivres formel 1-8}
+	
+	Find alle løsninger til $z^3=i$. \\
+	Arranger dem efter stigende argumenter.
+	
+	$z_1$ = \answerbox{e^{i \frac{\pi}{6}}}		$z_2$ = \answerbox{e^{i \frac{5\pi}{6}}}		$z_3$ = \answerbox{e^{i \frac{3\pi}{2}}}		
+	
+	
+	\hint 
+	
+	Indtegn det komplekse tal i et argand diagram. 
+	
+	\hint 
+	
+	Ud fra argand diagrammet kan højresiden skrives på polær form
+	\[
+	z^3 = \sqrt{1^2} \cdot e^{i \frac{\pi}{2}} = 1 \cdot e^{i \frac{\pi}{2}} 
+	\]
+	
+	
+	\hint
+	
+	Skriv $z$ på polær form $z = r_z \cdot e^{i \theta_z}$
+	\[
+	\left(r_z \cdot e^{i \theta_z}\right)^3 = r_z^3 \cdot e^{i \theta_z \cdot 3} = 1 \cdot e^{i \frac{\pi}{2}} 
+	\]
+	
+	\hint 
+	Match modulus og fase
+	
+	\[
+	r_z^3 = 1 \qquad \wedge \qquad e^{i \theta_z \cdot 3} = e^{i \frac{\pi}{2}} 
+	\]
+	
+	\hint
+	
+	Bestem modulus
+	\[
+	r_z  =  \left(1 \right)^{\frac{1}{3}} = 1
+	\]
+	
+	\hint
+	
+	Bestem argumentet
+	
+	\[
+	\theta_z \cdot 3 = \frac{\pi}{2} \qquad \Rightarrow \qquad  \theta_z = \frac{\pi}{6}
+	\]
+	
+	\hint
+	
+	Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
+	
+	\hint
+	
+	Find en anden løsning ($p=1$)
+	\[
+	\theta_z \cdot 3 = \frac{\pi}{2}  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_z = \frac{5 \pi}{6}
+	\]
+	
+	\hint
+	
+	Find en tredje løsning ($p=2$). Bemærk at dette er den sidste løsning, idet de efterfølgende løsninger blot vil være gentagelser af de forrige.
+	\[
+	\theta_z \cdot 3 =  \frac{\pi}{2}  + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_z = \frac{9 \pi}{6} = \frac{3 \pi}{2}
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{De Moivres formel 1-9}
+	
+	Find alle løsninger til $z^4=2-2i$. \\
+	Arranger dem efter stigende argumenter.
+	
+	$z_1$ = \answerbox{8^{\frac{1}{8}} \cdot e^{i \frac{7\pi}{16}}}		$z_2$ = \answerbox{8^{\frac{1}{8}} \cdot e^{i \frac{15\pi}{16}}}		$z_3$ = \answerbox{8^{\frac{1}{8}} \cdot e^{i \frac{23\pi}{16}}}		$z_4$ = \answerbox{8^{\frac{1}{8}} \cdot e^{i \frac{31\pi}{16}}}
+	
+	
+	\hint 
+	
+	Indtegn det komplekse tal i et argand diagram. 
+	
+	\hint 
+	
+	Ud fra argand diagrammet kan højresiden skrives på polær form
+	\[
+	z^4 = \sqrt{2^2+(-2)^2} \cdot e^{i \frac{7 \pi}{4}} = 8^{\frac{1}{2}} \cdot e^{i \frac{7 \pi}{4}} 
+	\]
+	
+	
+	\hint
+	
+	Skriv $z$ på polær form $z = r_z \cdot e^{i \theta_z}$
+	\[
+	\left(r_z \cdot e^{i \theta_z}\right)^4 = r_z^4 \cdot e^{i \theta_z \cdot 4} = 8^{\frac{1}{2}} \cdot e^{i \frac{7 \pi}{4}} 
+	\]
+	
+	\hint 
+	Match modulus og fase
+	
+	\[
+	r_z^4 = 8^{\frac{1}{2}} \qquad \wedge \qquad e^{i \theta_z \cdot 4} = e^{i \frac{7 \pi}{4}} 
+	\]
+	
+	\hint
+	
+	Bestem modulus
+	\[
+	r_z  =  \left(8^{\frac{1}{2}} \right)^{\frac{1}{4}} = 8^{\frac{1}{8}}
+	\]
+	
+	\hint
+	
+	Bestem argumentet
+	
+	\[
+	\theta_z \cdot 4 = \frac{7 \pi}{4} \qquad \Rightarrow \qquad  \theta_z = \frac{7\pi}{16}
+	\]
+	
+	\hint
+	
+	Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
+	
+	\hint
+	
+	Find en anden løsning ($p=1$)
+	\[
+	\theta_z \cdot 4 = \frac{7\pi}{4}  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_z = \frac{15 \pi}{16}
+	\]
+	
+	\hint
+	
+	Find en tredje løsning ($p=2$)
+	\[
+	\theta_z \cdot 4 = \frac{7\pi}{4}   + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_z = \frac{23 \pi}{16}
+	\]
+	
+	\hint
+	
+	Find en fjerde løsning ($p=3$). Bemærk at dette er den sidste løsning, idet de efterfølgende løsninger blot vil være gentagelser af de fire første. 
+	\[
+	\theta_z \cdot 4 = \frac{7\pi}{4}  + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_z = \frac{31 \pi}{16}
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{De Moivres formel 1-10}
+	
+	Find alle løsninger til $z^3=1+i$. \\
+	Arranger dem efter stigende argumenter.
+	
+	$z_1$ = \answerbox{2^{\frac{1}{6}} \cdot e^{i \frac{\pi}{12}}}		$z_2$ = \answerbox{2^{\frac{1}{6}} \cdot e^{i \frac{3\pi}{4}}}		$z_3$ = \answerbox{2^{\frac{1}{6}} \cdot e^{i \frac{17\pi}{12}}}	
+	
+	
+	\hint 
+	
+	Indtegn det komplekse tal i et argand diagram. 
+	
+	\hint 
+	
+	Ud fra argand diagrammet kan højresiden skrives på polær form
+	\[
+	z^3 = \sqrt{(1)^2+(1)^2} \cdot e^{i \frac{\pi}{4}} = 2^{\frac{1}{2}} \cdot e^{i \frac{\pi}{4}} 
+	\]
+	
+	
+	\hint
+	
+	Skriv $z$ på polær form $z = r_z \cdot e^{i \theta_z}$
+	\[
+	\left(r_z \cdot e^{i \theta_z}\right)^3 = r_z^3 \cdot e^{i \theta_z \cdot 3} = 2^{\frac{1}{2}} \cdot e^{i \frac{ \pi}{4}} 
+	\]
+	
+	\hint 
+	Match modulus og fase
+	
+	\[
+	r_z^3 = 2^{\frac{1}{2}} \qquad \wedge \qquad e^{i \theta_z \cdot 3} = e^{i \frac{\pi}{4}} 
+	\]
+	
+	\hint
+	
+	Bestem modulus
+	\[
+	r_z  =  \left(2^{\frac{1}{2}} \right)^{\frac{1}{3}} = 2^{\frac{1}{6}}
+	\]
+	
+	\hint
+	
+	Bestem argumentet
+	
+	\[
+	\theta_z \cdot 3 = \frac{\pi}{4} \qquad \Rightarrow \qquad  \theta_z = \frac{\pi}{12}
+	\]
+	
+	\hint
+	
+	Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
+	
+	\hint
+	
+	Find en anden løsning ($p=1$)
+	\[
+	\theta_z \cdot 3 = \frac{\pi}{4}  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_z = \frac{9 \pi}{12} = \frac{3\pi}{4}
+	\]
+	
+	\hint
+	
+	Find en tredje løsning ($p=2$). Bemærk at dette er den sidste løsning, idet de efterfølgende løsninger blot vil være gentagelser af de forrige.
+	\[
+	\theta_z \cdot 3 = \frac{\pi}{4}  + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_z = \frac{17 \pi}{12}
+	\]
+	
+
+\end{exercise}
+
+
+
 \end{document}
