--- a/complexnumbers/08argumentcartesiantopolar.tex
+++ b/complexnumbers/08argumentcartesiantopolar.tex
@@ -15,9 +15,9 @@
 
 \begin{exercise}{Bestem argument på kartesisk form 1-1}
 
-Bestem argumentet $\theta$ af det komplekse tal $z=4+3i$, dvs. vinklen imellem det komplekse tal og den reelle akse.
+Bestem argumentet $\theta$ af det komplekse tal $z=4+4i$, dvs. vinklen imellem det komplekse tal og den reelle akse.
 
-\answerbox{37.7}$^\circ$
+\answerbox{\frac{\pi}{4}}
 
 
 \hint 
@@ -36,7 +36,7 @@ Bestem argumentet $\theta$ vha. tangens
 
 Det giver
 \[
-\theta = \arctan \left(\frac{3}{4}\right) \approx 36.7^\circ
+\theta = \arctan \left(\frac{4}{4}\right) = \frac{\pi}{4}
 \]
 
 \hint
@@ -50,9 +50,9 @@ Tjek at vinklen er korrekt ud fra argand diagrammet. Læg den nødvendige vinkel
 
 \begin{exercise}{Bestem argument på kartesisk form 1-2}
 	
-	Bestem argumentet $\theta$ af det komplekse tal $z=5+i$, dvs. vinklen imellem det komplekse tal og den reelle akse.
+	Bestem argumentet $\theta$ af det komplekse tal $z=-5+5i$, dvs. vinklen imellem det komplekse tal og den reelle akse.
 	
-	\answerbox{11.3}$^\circ$
+	\answerbox{\frac{3}{4} \pi}
 	
 	
 	\hint 
@@ -71,13 +71,16 @@ Tjek at vinklen er korrekt ud fra argand diagrammet. Læg den nødvendige vinkel
 	
 	Det giver
 	\[
-	\theta = \arctan \left(\frac{1}{5}\right) \approx 11.3^\circ
+	\theta = \arctan \left(\frac{5}{-5}\right) = \frac{-\pi}{4}
 	\]
 	
 	\hint
 	
 	Tjek at vinklen er korrekt ud fra argand diagrammet. Læg den nødvendige vinkel oveni for at opnå den korrekte vinkel. 
 	
+	\[
+	\frac{-\pi}{4} + \pi = \frac{3}{4} \pi
+	\]
 	
 \end{exercise}
 
@@ -87,7 +90,7 @@ Tjek at vinklen er korrekt ud fra argand diagrammet. Læg den nødvendige vinkel
 	
 	Bestem argumentet $\theta$ af det komplekse tal $z=5i$, dvs. vinklen imellem det komplekse tal og den reelle akse.
 	
-	\answerbox{90}$^\circ$
+	\answerbox{ \frac{\pi}{2}}
 	
 	
 	\hint 
@@ -106,7 +109,7 @@ Tjek at vinklen er korrekt ud fra argand diagrammet. Læg den nødvendige vinkel
 	
 	Det giver
 	\[
-	\theta = \arctan \left(\frac{5}{0}\right) = 90^\circ
+	\theta = \arctan \left(\frac{5}{0}\right) = \frac{\pi}{2}
 	\]
 	
 	\hint
@@ -122,7 +125,7 @@ Tjek at vinklen er korrekt ud fra argand diagrammet. Læg den nødvendige vinkel
 	
 	Bestem argumentet $\theta$ af det komplekse tal $z=3$, dvs. vinklen imellem det komplekse tal og den reelle akse.
 	
-	\answerbox{0}$^\circ$
+	\answerbox{0}
 	
 	
 	\hint 
@@ -141,7 +144,7 @@ Tjek at vinklen er korrekt ud fra argand diagrammet. Læg den nødvendige vinkel
 	
 	Det giver
 	\[
-	\theta = \arctan \left(\frac{0}{3}\right) = 0^\circ
+	\theta = \arctan \left(\frac{0}{3}\right) = 0
 	\]
 	
 	\hint
@@ -157,7 +160,7 @@ Tjek at vinklen er korrekt ud fra argand diagrammet. Læg den nødvendige vinkel
 	
 	Bestem argumentet $\theta$ af det komplekse tal $z=2-2i$, dvs. vinklen imellem det komplekse tal og den reelle akse.
 	
-	\answerbox{315^\circ}$^\circ$
+	\answerbox{ \frac{7}{4} \pi}
 	
 	
 	\hint 
@@ -176,14 +179,14 @@ Tjek at vinklen er korrekt ud fra argand diagrammet. Læg den nødvendige vinkel
 	
 	Det giver
 	\[
-	\theta = \arctan \left(\frac{-2}{2}\right) =-45^\circ
+	\theta = \arctan \left(\frac{-2}{2}\right) =- \frac{\pi}{4}
 	\]
 	
 	\hint
 	
 	Tjek at vinklen er korrekt ud fra argand diagrammet. Læg den nødvendige vinkel oveni for at opnå den korrekte vinkel. 
 	\[
-	-45^\circ + 360^\circ = 315^\circ
+	- \frac{\pi}{4} + 2 \pi = \frac{7}{4} \pi
 	\]
 	
 \end{exercise}
@@ -194,7 +197,7 @@ Tjek at vinklen er korrekt ud fra argand diagrammet. Læg den nødvendige vinkel
 	
 	Bestem argumentet $\theta$ af det komplekse tal $z=-5i$, dvs. vinklen imellem det komplekse tal og den reelle akse.
 	
-	\answerbox{270}$^\circ$
+	\answerbox{\frac{3}{2} \pi }
 	
 	
 	\hint 
@@ -213,14 +216,14 @@ Tjek at vinklen er korrekt ud fra argand diagrammet. Læg den nødvendige vinkel
 	
 	Det giver
 	\[
-	\theta = \arctan \left(\frac{-5}{0}\right) = -90^\circ
+	\theta = \arctan \left(\frac{-5}{0}\right) = - \frac{\pi}{2}
 	\]
 	
 	\hint
 	
 	Tjek at vinklen er korrekt ud fra argand diagrammet. Læg den nødvendige vinkel oveni for at opnå den korrekte vinkel. 
 	\[
-	-90^\circ + 360^\circ  = 270^\circ 
+	- \frac{\pi}{2} + 2 \pi  = \frac{3}{2} \pi  	
 	\]
 	
 	
@@ -232,7 +235,7 @@ Tjek at vinklen er korrekt ud fra argand diagrammet. Læg den nødvendige vinkel
 	
 	Bestem argumentet $\theta$ af det komplekse tal $z=-2$, dvs. vinklen imellem det komplekse tal og den reelle akse.
 	
-	\answerbox{180}$^\circ$
+	\answerbox{\pi}
 	
 	
 	\hint 
@@ -251,14 +254,14 @@ Tjek at vinklen er korrekt ud fra argand diagrammet. Læg den nødvendige vinkel
 	
 	Det giver
 	\[
-	\theta = \arctan \left(\frac{0}{-2}\right) = 0^\circ
+	\theta = \arctan \left(\frac{0}{-2}\right) = 0
 	\]
 	
 	\hint
 	
 	Tjek at vinklen er korrekt ud fra argand diagrammet. Læg den nødvendige vinkel oveni for at opnå den korrekte vinkel. 
 	\[
-	0^\circ + 180^\circ = 180^\circ
+	0+ \pi = \pi
 	\]
 	
 	
@@ -268,9 +271,9 @@ Tjek at vinklen er korrekt ud fra argand diagrammet. Læg den nødvendige vinkel
 
 \begin{exercise}{Bestem argument på kartesisk form 1-8}
 	
-	Bestem argumentet $\theta$ af det komplekse tal $z=-3-2i$, dvs. vinklen imellem det komplekse tal og den reelle akse.
+	Bestem argumentet $\theta$ af det komplekse tal $z=-3-3i$, dvs. vinklen imellem det komplekse tal og den reelle akse.
 	
-	\answerbox{213.7}$^\circ$
+	\answerbox{\frac{5}{4} \pi}
 	
 	
 	\hint 
@@ -289,14 +292,14 @@ Tjek at vinklen er korrekt ud fra argand diagrammet. Læg den nødvendige vinkel
 	
 	Det giver
 	\[
-	\theta = \arctan \left(\frac{-2}{-3}\right) \approx 33.7^\circ
+	\theta = \arctan \left(\frac{-3}{-3}\right) = \frac{\pi}{4}
 	\]
 	
 	\hint
 	
 	Tjek at vinklen er korrekt ud fra argand diagrammet. Læg den nødvendige vinkel oveni for at opnå den korrekte vinkel. 
 	\[
-	33.7^\circ + 180^\circ = 213.7^\circ
+	\frac{\pi}{4} + \pi = \frac{5}{4} \pi
 	\]
 	
 	
