--- a/differentialequations/diffequationtrueorfalse.tex
+++ b/differentialequations/diffequationtrueorfalse.tex
@@ -3,14 +3,8 @@
 \usepackage{todonotes}
 \usepackage{graphicx}
 \usepackage{amsmath}
-\usepackage[colorlinks, linkcolor=blue, citecolor=blue, urlcolor=blue]{hyperref}
+\usepackage{tekvideoexercises}
 
-
-\newenvironment{exercise}[1]{\newpage\section{#1}}{}
-
-\newcommand{\answerbox}[1]{\fbox{$#1$}}
-
-\newcommand{\hint}{\subsection*{Hint}}
 
 \begin{document}
 \tableofcontents
@@ -23,11 +17,11 @@ Undersøg om forskriften $y = A \cdot e^{2t}$ løser differentialligningen
 \[
 \frac{dy}{dt} = 3y
 \]
-Sæt et X i den korrekte svarbox.
 
-Forskriften løser differentialligningen = \answerbox{} \\
-
-Forskriften løser ikke differentialligningen = \answerbox{X}
+\begin{multichoice}[randomizeorder, selectmultiple]
+\itemfalse Forskriften løser differentialligningen 
+\itemtrue Forskriften løser ikke differentialligningen 
+\end{multichoice}
 
 \hint
 
@@ -80,11 +74,11 @@ Ligningen stemmer ikke, derfor er $y(t) = A e^{2t}$ \underline{ikke} en løsning
 	\[
 	\frac{dy}{dt} = 3y
 	\]
-	Sæt et X i den korrekte svarbox.
-	
-	Forskriften løser differentialligningen = \answerbox{} \\
-	
-	Forskriften løser ikke differentialligningen = \answerbox{X}
+
+\begin{multichoice}[randomizeorder, selectmultiple]
+	\itemfalse Forskriften løser differentialligningen 
+	\itemtrue Forskriften løser ikke differentialligningen 
+\end{multichoice}
 	
 	\hint
 	
@@ -137,11 +131,12 @@ Ligningen stemmer ikke, derfor er $y(t) = A e^{2t}$ \underline{ikke} en løsning
 	\[
 	\frac{dy}{dt} = 3y
 	\]
-	Sæt et X i den korrekte svarbox.
-	
-	Forskriften løser differentialligningen = \answerbox{X} \\
-	
-	Forskriften løser ikke differentialligningen = \answerbox{}
+
+
+\begin{multichoice}[randomizeorder, selectmultiple]
+	\itemtrue Forskriften løser differentialligningen 
+	\itemfalse Forskriften løser ikke differentialligningen 
+\end{multichoice}
 	
 	\hint
 	
@@ -194,12 +189,11 @@ Ligningen stemmer ikke, derfor er $y(t) = A e^{2t}$ \underline{ikke} en løsning
 	\[
 	\frac{dy}{dt} = 7y
 	\]
-	Sæt et X i den korrekte svarbox.
 	
-	Forskriften løser differentialligningen = \answerbox{X} \\
-	
-	Forskriften løser ikke differentialligningen = \answerbox{}
-	
+\begin{multichoice}[randomizeorder, selectmultiple]
+	\itemtrue Forskriften løser differentialligningen 
+	\itemfalse Forskriften løser ikke differentialligningen 
+\end{multichoice}
 	\hint
 	
 	Indsæt forskriften i differentialligningen
@@ -251,11 +245,11 @@ Ligningen stemmer ikke, derfor er $y(t) = A e^{2t}$ \underline{ikke} en løsning
 	\[
 	\frac{dy}{dt} = 4y
 	\]
-	Sæt et X i den korrekte svarbox.
 	
-	Forskriften løser differentialligningen = \answerbox{} \\
-	
-	Forskriften løser ikke differentialligningen = \answerbox{X}
+\begin{multichoice}[randomizeorder, selectmultiple]
+	\itemfalse Forskriften løser differentialligningen 
+	\itemtrue Forskriften løser ikke differentialligningen 
+\end{multichoice}
 	
 	\hint
 	
@@ -308,11 +302,11 @@ Ligningen stemmer ikke, derfor er $y(t) = A e^{2t}$ \underline{ikke} en løsning
 	\[
 	\frac{dy}{dt} = 2y
 	\]
-	Sæt et X i den korrekte svarbox.
 	
-	Forskriften løser differentialligningen = \answerbox{X} \\
-	
-	Forskriften løser ikke differentialligningen = \answerbox{}
+\begin{multichoice}[randomizeorder, selectmultiple]
+	\itemtrue Forskriften løser differentialligningen 
+	\itemfalse Forskriften løser ikke differentialligningen 
+\end{multichoice}
 	
 	\hint
 	
@@ -365,11 +359,11 @@ Ligningen stemmer ikke, derfor er $y(t) = A e^{2t}$ \underline{ikke} en løsning
 	\[
 	\frac{dy}{dt} = 2y
 	\]
-	Sæt et X i den korrekte svarbox.
 	
-	Forskriften løser differentialligningen = \answerbox{} \\
-	
-	Forskriften løser ikke differentialligningen = \answerbox{X}
+\begin{multichoice}[randomizeorder, selectmultiple]
+	\itemfalse Forskriften løser differentialligningen 
+	\itemtrue Forskriften løser ikke differentialligningen 
+\end{multichoice}
 	
 	\hint
 	
@@ -422,11 +416,11 @@ Ligningen stemmer ikke, derfor er $y(t) = A e^{2t}$ \underline{ikke} en løsning
 	\[
 	\frac{dy}{dt} = 9 \cos(3t)
 	\]
-	Sæt et X i den korrekte svarbox.
 	
-	Forskriften løser differentialligningen = \answerbox{X} \\
-	
-	Forskriften løser ikke differentialligningen = \answerbox{}
+\begin{multichoice}[randomizeorder, selectmultiple]
+	\itemtrue Forskriften løser differentialligningen 
+	\itemfalse Forskriften løser ikke differentialligningen 
+\end{multichoice}
 	
 	\hint
 	
@@ -479,11 +473,11 @@ Ligningen stemmer ikke, derfor er $y(t) = A e^{2t}$ \underline{ikke} en løsning
 	\[
 	\frac{dy}{dt} = 3 \cos(2t)
 	\]
-	Sæt et X i den korrekte svarbox.
 	
-	Forskriften løser differentialligningen = \answerbox{} \\
-	
-	Forskriften løser ikke differentialligningen = \answerbox{X}
+\begin{multichoice}[randomizeorder, selectmultiple]
+	\itemfalse Forskriften løser differentialligningen 
+	\itemtrue Forskriften løser ikke differentialligningen 
+\end{multichoice}
 	
 	\hint
 	
@@ -536,11 +530,11 @@ Ligningen stemmer ikke, derfor er $y(t) = A e^{2t}$ \underline{ikke} en løsning
 	\[
 	\frac{dy}{dt} = 6 \cos(3t)
 	\]
-	Sæt et X i den korrekte svarbox.
 	
-	Forskriften løser differentialligningen = \answerbox{X} \\
-	
-	Forskriften løser ikke differentialligningen = \answerbox{}
+\begin{multichoice}[randomizeorder, selectmultiple]
+	\itemtrue Forskriften løser differentialligningen 
+	\itemfalse Forskriften løser ikke differentialligningen 
+\end{multichoice}
 	
 	\hint
 	
@@ -593,11 +587,11 @@ Ligningen stemmer ikke, derfor er $y(t) = A e^{2t}$ \underline{ikke} en løsning
 	\[
 	\frac{dy}{dt} = 11 \cdot \sin(4t)
 	\]
-	Sæt et X i den korrekte svarbox.
 	
-	Forskriften løser differentialligningen = \answerbox{} \\
-	
-	Forskriften løser ikke differentialligningen = \answerbox{X}
+\begin{multichoice}[randomizeorder, selectmultiple]
+	\itemfalse Forskriften løser differentialligningen 
+	\itemtrue Forskriften løser ikke differentialligningen 
+\end{multichoice}
 	
 	\hint
 	
@@ -650,11 +644,11 @@ Ligningen stemmer ikke, derfor er $y(t) = A e^{2t}$ \underline{ikke} en løsning
 	\[
 	\frac{dy}{dt} = -10 \sin(2t)
 	\]
-	Sæt et X i den korrekte svarbox.
 	
-	Forskriften løser differentialligningen = \answerbox{X} \\
-	
-	Forskriften løser ikke differentialligningen = \answerbox{}
+\begin{multichoice}[randomizeorder, selectmultiple]
+	\itemtrue Forskriften løser differentialligningen 
+	\itemfalse Forskriften løser ikke differentialligningen 
+\end{multichoice}
 	
 	\hint
 	
