Opgave skitser til integration.

--- a/integration/01integrationofsimpleexpressions.tex
+++ b/integration/01integrationofsimpleexpressions.tex
@@ -196,4 +196,37 @@ Løsningen er $f(x) = e^x + K$.
 
 \end{exercise}
 
+
+
+\begin{exercise}{Integration af basis funktioner 1-7}
+
+Bestem det værdien af det ubestemte integrale
+\[
+I = \int \frac{1}{x} dx
+\]
+og kald den ukendte konstant for $K$.
+
+$I$ = \answerbox{\ln(x) + K} \\
+
+\hint
+At integrere er det modsatte af at differentiere.
+
+\hint
+Vi skal altså finde en funktion $f(x)$, hvor der gælder at
+\[
+f'(x) = \frac{1}{x}
+\]
+
+\hint
+De afledte af den naturlige logaritme er
+\[
+\frac{d}{dx} \ln(x) = \frac{1}{x}
+\]
+
+
+\hint
+Løsningen er $f(x) = \ln(x) + K$.
+
+\end{exercise}
+
 \end{document}
