--- a/complexnumbers/11demoivrestheorem.tex
+++ b/complexnumbers/11demoivrestheorem.tex
@@ -15,10 +15,17 @@
 
 \begin{exercise}{De Moivres formel 1-1}
 
-Find alle løsninger til $w^4=-16$. \\
+Find alle løsninger til $w^4=-16$. 
+
 Arranger dem efter stigende argumenter.
 
-$w_1$ = \answerbox{2 \cdot e^{i \frac{\pi}{4}}}		$w_2$ = \answerbox{2 \cdot e^{i \frac{3 \pi}{4}}}		$w_3$ = \answerbox{2 \cdot e^{i \frac{5 \pi}{4}}}		$w_4$ = \answerbox{2 \cdot e^{i \frac{7 \pi}{4}}}
+$w_1$ = \answerbox{2 \cdot e^{i \frac{\pi}{4}}}		
+
+$w_2$ = \answerbox{2 \cdot e^{i \frac{3 \pi}{4}}}		
+
+$w_3$ = \answerbox{2 \cdot e^{i \frac{5 \pi}{4}}}		
+
+$w_4$ = \answerbox{2 \cdot e^{i \frac{7 \pi}{4}}}
 
 
 \hint 
@@ -78,7 +85,9 @@ Find en tredje løsning ($p=2$)
 
 \hint
 
-Find en fjerde løsning ($p=3$). Bemærk at dette er den sidste løsning, idet de efterfølgende løsninger blot vil være gentagelser af de fire første. 
+Find en fjerde løsning ($p=3$). 
+Bemærk at dette er den sidste løsning, idet de efterfølgende 
+løsninger blot vil være gentagelser af de fire første. 
 \[
 \theta_w \cdot 4 = \pi  + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_w = \frac{7 \pi}{4}
 \]
@@ -88,629 +97,692 @@ Find en fjerde løsning ($p=3$). Bemærk at dette er den sidste løsning, idet d
 \newpage
 
 \begin{exercise}{De Moivres formel 1-2}
-	
-	Find alle løsninger til $w^2=-49$. \\
-	Arranger dem efter stigende argumenter.
-	
-	$w_1$ = \answerbox{7 \cdot e^{i \frac{\pi}{2}}}		$w_2$ = \answerbox{7 \cdot e^{i \frac{3 \pi}{2}}}		
-	
-	
-	\hint 
-	
-	Skriv højresiden på polær form
-	\[
-	w^2 = 49 \cdot e^{i \pi}
-	\]
-	
-	
-	\hint
-	
-	Skriv $w$ på polær form $w = r_w \cdot e^{i \theta_w}$
-	\[
-	\left(r_w \cdot e^{i \theta_w}\right)^2 = r_w^2 \cdot e^{i \theta_w \cdot 2} = 49 \cdot e^{i \pi}
-	\]
-	
-	\hint 
-	Match modulus og fase
-	
-	\[
-	r_w^2 = 49 \qquad \wedge \qquad e^{i \theta_w \cdot 2} = e^{i \pi}
-	\]
-	
-	\hint
-	
-	Bestem modulus
-	\[
-	r_w  =  \sqrt{49} = 7
-	\]
-	
-	\hint
-	
-	Bestem argumentet
-	
-	\[
-	\theta_w \cdot 2 = \pi \qquad \Rightarrow \qquad  \theta_w = \frac{\pi}{2}
-	\]
-	
-	\hint
-	
-	Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
-	
-	\hint
-	
-	Find en anden løsning ($p=1$). Bemærk at dette er den sidste løsning, idet de efterfølgende løsninger blot vil være gentagelser af de forrige. 
-	\[
-	\theta_w \cdot 2 = \pi  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_w = \frac{3 \pi}{2}
-	\]
 
-	
+Find alle løsninger til $w^2=-49$. 
+
+Arranger dem efter stigende argumenter.
+
+$w_1$ = \answerbox{7 \cdot e^{i \frac{\pi}{2}}}		
+
+$w_2$ = \answerbox{7 \cdot e^{i \frac{3 \pi}{2}}}		
+
+
+\hint 
+
+Skriv højresiden på polær form
+\[
+w^2 = 49 \cdot e^{i \pi}
+\]
+
+
+\hint
+
+Skriv $w$ på polær form $w = r_w \cdot e^{i \theta_w}$
+\[
+\left(r_w \cdot e^{i \theta_w}\right)^2 = r_w^2 \cdot e^{i \theta_w \cdot 2} = 49 \cdot e^{i \pi}
+\]
+
+\hint 
+Match modulus og fase
+
+\[
+r_w^2 = 49 \qquad \wedge \qquad e^{i \theta_w \cdot 2} = e^{i \pi}
+\]
+
+\hint
+
+Bestem modulus
+\[
+r_w  =  \sqrt{49} = 7
+\]
+
+\hint
+
+Bestem argumentet
+
+\[
+\theta_w \cdot 2 = \pi \qquad \Rightarrow \qquad  \theta_w = \frac{\pi}{2}
+\]
+
+\hint
+
+Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
+
+\hint
+
+Find en anden løsning ($p=1$). 
+Bemærk at dette er den sidste løsning, idet de efterfølgende 
+løsninger blot vil være gentagelser af de forrige. 
+\[
+\theta_w \cdot 2 = \pi  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_w = \frac{3 \pi}{2}
+\]
+
+
 \end{exercise}
 
 \newpage
 
 \begin{exercise}{De Moivres formel 1-3}
-	
-	Find alle løsninger til $w^3=-27$. \\
-	Arranger dem efter stigende argumenter.
-	
-	$w_1$ = \answerbox{3 \cdot e^{i \frac{\pi}{3}}}		$w_2$ = \answerbox{3 \cdot e^{i \pi}}		$w_3$ = \answerbox{3 \cdot e^{i \frac{5 \pi}{3}}}	
-	
-	
-	\hint 
-	
-	Skriv højresiden på polær form
-	\[
-	w^3 = 27 \cdot e^{i \pi}
-	\]
-	
-	
-	\hint
-	
-	Skriv $w$ på polær form $w = r_w \cdot e^{i \theta_w}$
-	\[
-	\left(r_w \cdot e^{i \theta_w}\right)^3 = r_w^3 \cdot e^{i \theta_w \cdot 3} = 27 \cdot e^{i \pi}
-	\]
-	
-	\hint 
-	Match modulus og fase
-	
-	\[
-	r_w^3 = 27 \qquad \wedge \qquad e^{i \theta_w \cdot 3} = e^{i \pi}
-	\]
-	
-	\hint
-	
-	Bestem modulus
-	\[
-	r_w  =  \sqrt[3]{27} = 3
-	\]
-	
-	\hint
-	
-	Bestem argumentet
-	
-	\[
-	\theta_w \cdot 3 = \pi \qquad \Rightarrow \qquad  \theta_w = \frac{\pi}{3}
-	\]
-	
-	\hint
-	
-	Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
-	
-	\hint
-	
-	Find en anden løsning ($p=1$)
-	\[
-	\theta_w \cdot 3 = \pi  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_w = \pi
-	\]
-	
-	\hint
-	
-	Find en tredje løsning ($p=2$). Bemærk at dette en den sidste løsning, idet de efterfølgende løsninger blot vil være gentagelser af de forrige.
-	\[
-	\theta_w \cdot 3 = \pi  + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_w = \frac{5 \pi}{3}
-	\]
-	
-	
+
+Find alle løsninger til $w^3=-27$. 
+
+Arranger dem efter stigende argumenter.
+
+$w_1$ = \answerbox{3 \cdot e^{i \frac{\pi}{3}}}		
+
+$w_2$ = \answerbox{3 \cdot e^{i \pi}}		
+
+$w_3$ = \answerbox{3 \cdot e^{i \frac{5 \pi}{3}}}	
+
+
+\hint 
+
+Skriv højresiden på polær form
+\[
+w^3 = 27 \cdot e^{i \pi}
+\]
+
+
+\hint
+
+Skriv $w$ på polær form $w = r_w \cdot e^{i \theta_w}$
+\[
+\left(r_w \cdot e^{i \theta_w}\right)^3 = r_w^3 \cdot e^{i \theta_w \cdot 3} = 27 \cdot e^{i \pi}
+\]
+
+\hint 
+Match modulus og fase
+
+\[
+r_w^3 = 27 \qquad \wedge \qquad e^{i \theta_w \cdot 3} = e^{i \pi}
+\]
+
+\hint
+
+Bestem modulus
+\[
+r_w  =  \sqrt[3]{27} = 3
+\]
+
+\hint
+
+Bestem argumentet
+
+\[
+\theta_w \cdot 3 = \pi \qquad \Rightarrow \qquad  \theta_w = \frac{\pi}{3}
+\]
+
+\hint
+
+Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
+
+\hint
+
+Find en anden løsning ($p=1$)
+\[
+\theta_w \cdot 3 = \pi  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_w = \pi
+\]
+
+\hint
+
+Find en tredje løsning ($p=2$). 
+Bemærk at dette en den sidste løsning, idet de efterfølgende 
+løsninger blot vil være gentagelser af de forrige.
+\[
+\theta_w \cdot 3 = \pi  + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_w = \frac{5 \pi}{3}
+\]
+
+
 \end{exercise}
 
 \newpage
 
 \begin{exercise}{De Moivres formel 1-4}
-	
-	Find alle løsninger til $w^4=-81$. \\
-	Arranger dem efter stigende argumenter.
-	
-	$w_1$ = \answerbox{3 \cdot e^{i \frac{\pi}{4}}}		$w_2$ = \answerbox{3 \cdot e^{i \frac{3 \pi}{4}}}		$w_3$ = \answerbox{3 \cdot e^{i \frac{5 \pi}{4}}}		$w_4$ = \answerbox{3 \cdot e^{i \frac{7 \pi}{4}}}	 
-	
-	
-	\hint 
-	
-	Skriv højresiden på polær form
-	\[
-	w^4 = 81 \cdot e^{i \pi}
-	\]
-	
-	
-	\hint
-	
-	Skriv $w$ på polær form $w = r_w \cdot e^{i \theta_w}$
-	\[
-	\left(r_w \cdot e^{i \theta_w}\right)^4 = r_w^4 \cdot e^{i \theta_w \cdot 4} = 81 \cdot e^{i \pi}
-	\]
-	
-	\hint 
-	Match modulus og fase
-	
-	\[
-	r_w^4 = 81 \qquad \wedge \qquad e^{i \theta_w \cdot 4} = e^{i \pi}
-	\]
-	
-	\hint
-	
-	Bestem modulus
-	\[
-	r_w  =  \sqrt[4]{81} = 3
-	\]
-	
-	\hint
-	
-	Bestem argumentet
-	
-	\[
-	\theta_w \cdot 4 = \pi \qquad \Rightarrow \qquad  \theta_w = \frac{\pi}{4}
-	\]
-	
-	\hint
-	
-	Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
-	
-	\hint
-	
-	Find en anden løsning ($p=1$)
-	\[
-	\theta_w \cdot 4 = \pi  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_w = \frac{3 \pi}{4}
-	\]
-	
-	\hint
-	
-	Find en tredje løsning ($p=2$)
-	\[
-	\theta_w \cdot 4 = \pi  + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_w = \frac{5 \pi}{4}
-	\]
-	
-	\hint
-	
-	Find en fjerde løsning ($p=3$). Bemærk at dette er den sidste løsning, idet de efterfølgende løsninger blot vil være gentagelser af de fire første. 
-	\[
-	\theta_w \cdot 4 = \pi  + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_w = \frac{7 \pi}{4}
-	\]
-	
+
+Find alle løsninger til $w^4=-81$. 
+
+Arranger dem efter stigende argumenter.
+
+$w_1$ = \answerbox{3 \cdot e^{i \frac{\pi}{4}}}		
+
+$w_2$ = \answerbox{3 \cdot e^{i \frac{3 \pi}{4}}}		
+
+$w_3$ = \answerbox{3 \cdot e^{i \frac{5 \pi}{4}}}		
+
+$w_4$ = \answerbox{3 \cdot e^{i \frac{7 \pi}{4}}}	 
+
+
+\hint 
+
+Skriv højresiden på polær form
+\[
+w^4 = 81 \cdot e^{i \pi}
+\]
+
+
+\hint
+
+Skriv $w$ på polær form $w = r_w \cdot e^{i \theta_w}$
+\[
+\left(r_w \cdot e^{i \theta_w}\right)^4 = r_w^4 \cdot e^{i \theta_w \cdot 4} = 81 \cdot e^{i \pi}
+\]
+
+\hint 
+Match modulus og fase
+
+\[
+r_w^4 = 81 \qquad \wedge \qquad e^{i \theta_w \cdot 4} = e^{i \pi}
+\]
+
+\hint
+
+Bestem modulus
+\[
+r_w  =  \sqrt[4]{81} = 3
+\]
+
+\hint
+
+Bestem argumentet
+
+\[
+\theta_w \cdot 4 = \pi \qquad \Rightarrow \qquad  \theta_w = \frac{\pi}{4}
+\]
+
+\hint
+
+Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
+
+\hint
+
+Find en anden løsning ($p=1$)
+\[
+\theta_w \cdot 4 = \pi  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_w = \frac{3 \pi}{4}
+\]
+
+\hint
+
+Find en tredje løsning ($p=2$)
+\[
+\theta_w \cdot 4 = \pi  + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_w = \frac{5 \pi}{4}
+\]
+
+\hint
+
+Find en fjerde løsning ($p=3$). 
+Bemærk at dette er den sidste løsning, idet de efterfølgende 
+løsninger blot vil være gentagelser af de fire første. 
+\[
+\theta_w \cdot 4 = \pi  + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_w = \frac{7 \pi}{4}
+\]
+
 \end{exercise}
 
 \newpage
 
 \begin{exercise}{De Moivres formel 1-5}
-	
-	Find alle løsninger til $w^2=-25$. \\
-	Arranger dem efter stigende argumenter.
-	
-	$w_1$ = \answerbox{5 \cdot e^{i \frac{\pi}{2}}}		$w_2$ = \answerbox{5 \cdot e^{i \frac{3 \pi}{2}}}		
-	
-	
-	\hint 
-	
-	Skriv højresiden på polær form
-	\[
-	w^2 = 25 \cdot e^{i \pi}
-	\]
-	
-	
-	\hint
-	
-	Skriv $w$ på polær form $w = r_w \cdot e^{i \theta_w}$
-	\[
-	\left(r_w \cdot e^{i \theta_w}\right)^2 = r_w^2 \cdot e^{i \theta_w \cdot 2} = 25 \cdot e^{i \pi}
-	\]
-	
-	\hint 
-	Match modulus og fase
-	
-	\[
-	r_w^2 = 25 \qquad \wedge \qquad e^{i \theta_w \cdot 2} = e^{i \pi}
-	\]
-	
-	\hint
-	
-	Bestem modulus
-	\[
-	r_w  =  \sqrt{25} = 5
-	\]
-	
-	\hint
-	
-	Bestem argumentet
-	
-	\[
-	\theta_w \cdot 2 = \pi \qquad \Rightarrow \qquad  \theta_w = \frac{\pi}{2}
-	\]
-	
-	\hint
-	
-	Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
-	
-	\hint
-	
-	Find en anden løsning ($p=1$). Bemærk at dette er den sidste løsning, idet de efterfølgende løsninger blot vil være gentagelser af de forrige.
-	\[
-	\theta_w \cdot 2 = \pi  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_w = \frac{3 \pi}{2}
-	\]
-	
 
-	
+Find alle løsninger til $w^2=-25$. 
+
+Arranger dem efter stigende argumenter.
+
+$w_1$ = \answerbox{5 \cdot e^{i \frac{\pi}{2}}}		
+
+$w_2$ = \answerbox{5 \cdot e^{i \frac{3 \pi}{2}}}		
+
+
+\hint 
+
+Skriv højresiden på polær form
+\[
+w^2 = 25 \cdot e^{i \pi}
+\]
+
+
+\hint
+
+Skriv $w$ på polær form $w = r_w \cdot e^{i \theta_w}$
+\[
+\left(r_w \cdot e^{i \theta_w}\right)^2 = r_w^2 \cdot e^{i \theta_w \cdot 2} = 25 \cdot e^{i \pi}
+\]
+
+\hint 
+Match modulus og fase
+
+\[
+r_w^2 = 25 \qquad \wedge \qquad e^{i \theta_w \cdot 2} = e^{i \pi}
+\]
+
+\hint
+
+Bestem modulus
+\[
+r_w  =  \sqrt{25} = 5
+\]
+
+\hint
+
+Bestem argumentet
+
+\[
+\theta_w \cdot 2 = \pi \qquad \Rightarrow \qquad  \theta_w = \frac{\pi}{2}
+\]
+
+\hint
+
+Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
+
+\hint
+
+Find en anden løsning ($p=1$). 
+Bemærk at dette er den sidste løsning, idet de efterfølgende 
+løsninger blot vil være gentagelser af de forrige.
+\[
+\theta_w \cdot 2 = \pi  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_w = \frac{3 \pi}{2}
+\]
+
+
+
 \end{exercise}
 
 \newpage
 
 \begin{exercise}{De Moivres formel 1-6}
-	
-	Find alle løsninger til $z^4=-1-i$. \\
-	Arranger dem efter stigende argumenter.
-	
-	$z_1$ = \answerbox{2^{\frac{1}{8}} \cdot e^{i \frac{5\pi}{16}}}		$z_2$ = \answerbox{2^{\frac{1}{8}} \cdot e^{i \frac{13\pi}{16}}}		$z_3$ = \answerbox{2^{\frac{1}{8}} \cdot e^{i \frac{21\pi}{16}}}		$z_4$ = \answerbox{2^{\frac{1}{8}} \cdot e^{i \frac{29\pi}{16}}}
-	
-	
-	\hint 
-	
-	Indtegn det komplekse tal i et argand diagram. 
-	
-	\hint 
-	
-	Ud fra argand diagrammet kan højresiden skrives på polær form
-	\[
-	z^4 = \sqrt{(-1)^2+(-1)^2} \cdot e^{i \frac{5 \pi}{4}} = 2^{\frac{1}{2}} \cdot e^{i \frac{5 \pi}{4}} 
-	\]
-	
-	
-	\hint
-	
-	Skriv $z$ på polær form $z = r_z \cdot e^{i \theta_z}$
-	\[
-	\left(r_z \cdot e^{i \theta_z}\right)^4 = r_z^4 \cdot e^{i \theta_z \cdot 4} = 2^{\frac{1}{2}} \cdot e^{i \frac{5 \pi}{4}} 
-	\]
-	
-	\hint 
-	Match modulus og fase
-	
-	\[
-	r_z^4 = 2^{\frac{1}{2}} \qquad \wedge \qquad e^{i \theta_z \cdot 4} = e^{i \frac{5 \pi}{4}} 
-	\]
-	
-	\hint
-	
-	Bestem modulus
-	\[
-	r_z  =  \left(2^{\frac{1}{2}} \right)^{\frac{1}{4}} = 2^{\frac{1}{8}}
-	\]
-	
-	\hint
-	
-	Bestem argumentet
-	
-	\[
-	\theta_z \cdot 4 = \frac{5 \pi}{4} \qquad \Rightarrow \qquad  \theta_z = \frac{5\pi}{16}
-	\]
-	
-	\hint
-	
-	Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
-	
-	\hint
-	
-	Find en anden løsning ($p=1$)
-	\[
-	\theta_z \cdot 4 = \frac{5\pi}{4}  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_z = \frac{13 \pi}{16}
-	\]
-	
-	\hint
-	
-	Find en tredje løsning ($p=2$)
-	\[
-	\theta_z \cdot 4 =  \frac{5\pi}{4}  + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_z = \frac{21 \pi}{16}
-	\]
-	
-	\hint
-	
-	Find en fjerde løsning ($p=3$). Bemærk at dette er den sidste løsning, idet de efterfølgende løsninger blot vil være gentagelser af de fire første. 
-	\[
-	\theta_z \cdot 4 = \frac{5\pi}{4} + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_z = \frac{29 \pi}{16}
-	\]
-	
+
+Find alle løsninger til $z^4=-1-i$. 
+
+Arranger dem efter stigende argumenter.
+
+$z_1$ = \answerbox{2^{\frac{1}{8}} \cdot e^{i \frac{5\pi}{16}}}		
+
+$z_2$ = \answerbox{2^{\frac{1}{8}} \cdot e^{i \frac{13\pi}{16}}}		
+
+$z_3$ = \answerbox{2^{\frac{1}{8}} \cdot e^{i \frac{21\pi}{16}}}		
+
+$z_4$ = \answerbox{2^{\frac{1}{8}} \cdot e^{i \frac{29\pi}{16}}}
+
+
+\hint 
+
+Indtegn det komplekse tal i et argand diagram. 
+
+\hint 
+
+Ud fra argand diagrammet kan højresiden skrives på polær form
+\[
+z^4 = \sqrt{(-1)^2+(-1)^2} \cdot e^{i \frac{5 \pi}{4}} = 2^{\frac{1}{2}} \cdot e^{i \frac{5 \pi}{4}} 
+\]
+
+
+\hint
+
+Skriv $z$ på polær form $z = r_z \cdot e^{i \theta_z}$
+\[
+\left(r_z \cdot e^{i \theta_z}\right)^4 = r_z^4 \cdot e^{i \theta_z \cdot 4} = 2^{\frac{1}{2}} \cdot e^{i \frac{5 \pi}{4}} 
+\]
+
+\hint 
+Match modulus og fase
+
+\[
+r_z^4 = 2^{\frac{1}{2}} \qquad \wedge \qquad e^{i \theta_z \cdot 4} = e^{i \frac{5 \pi}{4}} 
+\]
+
+\hint
+
+Bestem modulus
+\[
+r_z  =  \left(2^{\frac{1}{2}} \right)^{\frac{1}{4}} = 2^{\frac{1}{8}}
+\]
+
+\hint
+
+Bestem argumentet
+
+\[
+\theta_z \cdot 4 = \frac{5 \pi}{4} \qquad \Rightarrow \qquad  \theta_z = \frac{5\pi}{16}
+\]
+
+\hint
+
+Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
+
+\hint
+
+Find en anden løsning ($p=1$)
+\[
+\theta_z \cdot 4 = \frac{5\pi}{4}  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_z = \frac{13 \pi}{16}
+\]
+
+\hint
+
+Find en tredje løsning ($p=2$)
+\[
+\theta_z \cdot 4 =  \frac{5\pi}{4}  + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_z = \frac{21 \pi}{16}
+\]
+
+\hint
+
+Find en fjerde løsning ($p=3$). 
+Bemærk at dette er den sidste løsning, idet de efterfølgende 
+løsninger blot vil være gentagelser af de fire første. 
+\[
+\theta_z \cdot 4 = \frac{5\pi}{4} + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_z = \frac{29 \pi}{16}
+\]
+
 \end{exercise}
 
 \newpage
 
 \begin{exercise}{De Moivres formel 1-7}
-	
-	Find alle løsninger til $z^2=-2+2i$. \\
-	Arranger dem efter stigende argumenter.
-	
-	$z_1$ = \answerbox{8^{\frac{1}{4}} \cdot e^{i \frac{3\pi}{8}}}		$z_2$ = \answerbox{8^{\frac{1}{4}} \cdot e^{i \frac{11\pi}{8}}}	
-	
-	\hint 
-	
-	Indtegn det komplekse tal i et argand diagram. 
-	
-	\hint 
-	
-	Ud fra argand diagrammet kan højresiden skrives på polær form
-	\[
-	z^2 = \sqrt{(-2)^2+2^2} \cdot e^{i \frac{3 \pi}{4}} = 8^{\frac{1}{2}} \cdot e^{i \frac{3 \pi}{4}} 
-	\]
-	
-	
-	\hint
-	
-	Skriv $z$ på polær form $z = r_z \cdot e^{i \theta_z}$
-	\[
-	\left(r_z \cdot e^{i \theta_z}\right)^2 = r_z^2 \cdot e^{i \theta_z \cdot 2} = 8^{\frac{1}{2}} \cdot e^{i \frac{3 \pi}{4}} 
-	\]
-	
-	\hint 
-	Match modulus og fase
-	
-	\[
-	r_z^2 = 8^{\frac{1}{2}}  \qquad \wedge \qquad e^{i \theta_z \cdot 2} = e^{i \frac{3 \pi}{4}} 
-	\]
-	
-	\hint
-	
-	Bestem modulus
-	\[
-	r_z  =  \left(8^{\frac{1}{2}} \right)^{\frac{1}{2}} = 8^{\frac{1}{4}}
-	\]
-	
-	\hint
-	
-	Bestem argumentet
-	
-	\[
-	\theta_z \cdot 2 = \frac{3 \pi}{4} \qquad \Rightarrow \qquad  \theta_z = \frac{3\pi}{8}
-	\]
-	
-	\hint
-	
-	Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
-	
-	\hint
-	
-	Find en anden løsning ($p=1$). Bemærk at dette er den sidste løsning, idet de efterfølgende løsninger blot vil være gentagelser af de forrige. 
-	\[
-	\theta_z \cdot 2 = \frac{3 \pi}{4}  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_z = \frac{11 \pi}{8}
-	\]
-	
+
+Find alle løsninger til $z^2=-2+2i$. 
+
+Arranger dem efter stigende argumenter.
+
+$z_1$ = \answerbox{8^{\frac{1}{4}} \cdot e^{i \frac{3\pi}{8}}}		
+
+$z_2$ = \answerbox{8^{\frac{1}{4}} \cdot e^{i \frac{11\pi}{8}}}	
+
+\hint 
+
+Indtegn det komplekse tal i et argand diagram. 
+
+\hint 
+
+Ud fra argand diagrammet kan højresiden skrives på polær form
+\[
+z^2 = \sqrt{(-2)^2+2^2} \cdot e^{i \frac{3 \pi}{4}} = 8^{\frac{1}{2}} \cdot e^{i \frac{3 \pi}{4}} 
+\]
+
+
+\hint
+
+Skriv $z$ på polær form $z = r_z \cdot e^{i \theta_z}$
+\[
+\left(r_z \cdot e^{i \theta_z}\right)^2 = r_z^2 \cdot e^{i \theta_z \cdot 2} = 8^{\frac{1}{2}} \cdot e^{i \frac{3 \pi}{4}} 
+\]
+
+\hint 
+Match modulus og fase
+
+\[
+r_z^2 = 8^{\frac{1}{2}}  \qquad \wedge \qquad e^{i \theta_z \cdot 2} = e^{i \frac{3 \pi}{4}} 
+\]
+
+\hint
+
+Bestem modulus
+\[
+r_z  =  \left(8^{\frac{1}{2}} \right)^{\frac{1}{2}} = 8^{\frac{1}{4}}
+\]
+
+\hint
+
+Bestem argumentet
+
+\[
+\theta_z \cdot 2 = \frac{3 \pi}{4} \qquad \Rightarrow \qquad  \theta_z = \frac{3\pi}{8}
+\]
+
+\hint
+
+Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
+
+\hint
+
+Find en anden løsning ($p=1$). 
+Bemærk at dette er den sidste løsning, idet de efterfølgende 
+løsninger blot vil være gentagelser af de forrige. 
+\[
+\theta_z \cdot 2 = \frac{3 \pi}{4}  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_z = \frac{11 \pi}{8}
+\]
+
 
 \end{exercise}
 
 \newpage
 
 \begin{exercise}{De Moivres formel 1-8}
-	
-	Find alle løsninger til $z^3=i$. \\
-	Arranger dem efter stigende argumenter.
-	
-	$z_1$ = \answerbox{e^{i \frac{\pi}{6}}}		$z_2$ = \answerbox{e^{i \frac{5\pi}{6}}}		$z_3$ = \answerbox{e^{i \frac{3\pi}{2}}}		
-	
-	
-	\hint 
-	
-	Indtegn det komplekse tal i et argand diagram. 
-	
-	\hint 
-	
-	Ud fra argand diagrammet kan højresiden skrives på polær form
-	\[
-	z^3 = \sqrt{1^2} \cdot e^{i \frac{\pi}{2}} = 1 \cdot e^{i \frac{\pi}{2}} 
-	\]
-	
-	
-	\hint
-	
-	Skriv $z$ på polær form $z = r_z \cdot e^{i \theta_z}$
-	\[
-	\left(r_z \cdot e^{i \theta_z}\right)^3 = r_z^3 \cdot e^{i \theta_z \cdot 3} = 1 \cdot e^{i \frac{\pi}{2}} 
-	\]
-	
-	\hint 
-	Match modulus og fase
-	
-	\[
-	r_z^3 = 1 \qquad \wedge \qquad e^{i \theta_z \cdot 3} = e^{i \frac{\pi}{2}} 
-	\]
-	
-	\hint
-	
-	Bestem modulus
-	\[
-	r_z  =  \left(1 \right)^{\frac{1}{3}} = 1
-	\]
-	
-	\hint
-	
-	Bestem argumentet
-	
-	\[
-	\theta_z \cdot 3 = \frac{\pi}{2} \qquad \Rightarrow \qquad  \theta_z = \frac{\pi}{6}
-	\]
-	
-	\hint
-	
-	Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
-	
-	\hint
-	
-	Find en anden løsning ($p=1$)
-	\[
-	\theta_z \cdot 3 = \frac{\pi}{2}  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_z = \frac{5 \pi}{6}
-	\]
-	
-	\hint
-	
-	Find en tredje løsning ($p=2$). Bemærk at dette er den sidste løsning, idet de efterfølgende løsninger blot vil være gentagelser af de forrige.
-	\[
-	\theta_z \cdot 3 =  \frac{\pi}{2}  + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_z = \frac{9 \pi}{6} = \frac{3 \pi}{2}
-	\]
-	
-	
+
+Find alle løsninger til $z^3=i$. 
+
+Arranger dem efter stigende argumenter.
+
+$z_1$ = \answerbox{e^{i \frac{\pi}{6}}}		
+
+$z_2$ = \answerbox{e^{i \frac{5\pi}{6}}}		
+
+$z_3$ = \answerbox{e^{i \frac{3\pi}{2}}}		
+
+
+\hint 
+
+Indtegn det komplekse tal i et argand diagram. 
+
+\hint 
+
+Ud fra argand diagrammet kan højresiden skrives på polær form
+\[
+z^3 = \sqrt{1^2} \cdot e^{i \frac{\pi}{2}} = 1 \cdot e^{i \frac{\pi}{2}} 
+\]
+
+
+\hint
+
+Skriv $z$ på polær form $z = r_z \cdot e^{i \theta_z}$
+\[
+\left(r_z \cdot e^{i \theta_z}\right)^3 = r_z^3 \cdot e^{i \theta_z \cdot 3} = 1 \cdot e^{i \frac{\pi}{2}} 
+\]
+
+\hint 
+Match modulus og fase
+
+\[
+r_z^3 = 1 \qquad \wedge \qquad e^{i \theta_z \cdot 3} = e^{i \frac{\pi}{2}} 
+\]
+
+\hint
+
+Bestem modulus
+\[
+r_z  =  \left(1 \right)^{\frac{1}{3}} = 1
+\]
+
+\hint
+
+Bestem argumentet
+
+\[
+\theta_z \cdot 3 = \frac{\pi}{2} \qquad \Rightarrow \qquad  \theta_z = \frac{\pi}{6}
+\]
+
+\hint
+
+Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
+
+\hint
+
+Find en anden løsning ($p=1$)
+\[
+\theta_z \cdot 3 = \frac{\pi}{2}  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_z = \frac{5 \pi}{6}
+\]
+
+\hint
+
+Find en tredje løsning ($p=2$). 
+Bemærk at dette er den sidste løsning, idet de efterfølgende 
+løsninger blot vil være gentagelser af de forrige.
+\[
+\theta_z \cdot 3 =  \frac{\pi}{2}  + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_z = \frac{9 \pi}{6} = \frac{3 \pi}{2}
+\]
+
+
 \end{exercise}
 
 \newpage
 
 \begin{exercise}{De Moivres formel 1-9}
-	
-	Find alle løsninger til $z^4=2-2i$. \\
-	Arranger dem efter stigende argumenter.
-	
-	$z_1$ = \answerbox{8^{\frac{1}{8}} \cdot e^{i \frac{7\pi}{16}}}		$z_2$ = \answerbox{8^{\frac{1}{8}} \cdot e^{i \frac{15\pi}{16}}}		$z_3$ = \answerbox{8^{\frac{1}{8}} \cdot e^{i \frac{23\pi}{16}}}		$z_4$ = \answerbox{8^{\frac{1}{8}} \cdot e^{i \frac{31\pi}{16}}}
-	
-	
-	\hint 
-	
-	Indtegn det komplekse tal i et argand diagram. 
-	
-	\hint 
-	
-	Ud fra argand diagrammet kan højresiden skrives på polær form
-	\[
-	z^4 = \sqrt{2^2+(-2)^2} \cdot e^{i \frac{7 \pi}{4}} = 8^{\frac{1}{2}} \cdot e^{i \frac{7 \pi}{4}} 
-	\]
-	
-	
-	\hint
-	
-	Skriv $z$ på polær form $z = r_z \cdot e^{i \theta_z}$
-	\[
-	\left(r_z \cdot e^{i \theta_z}\right)^4 = r_z^4 \cdot e^{i \theta_z \cdot 4} = 8^{\frac{1}{2}} \cdot e^{i \frac{7 \pi}{4}} 
-	\]
-	
-	\hint 
-	Match modulus og fase
-	
-	\[
-	r_z^4 = 8^{\frac{1}{2}} \qquad \wedge \qquad e^{i \theta_z \cdot 4} = e^{i \frac{7 \pi}{4}} 
-	\]
-	
-	\hint
-	
-	Bestem modulus
-	\[
-	r_z  =  \left(8^{\frac{1}{2}} \right)^{\frac{1}{4}} = 8^{\frac{1}{8}}
-	\]
-	
-	\hint
-	
-	Bestem argumentet
-	
-	\[
-	\theta_z \cdot 4 = \frac{7 \pi}{4} \qquad \Rightarrow \qquad  \theta_z = \frac{7\pi}{16}
-	\]
-	
-	\hint
-	
-	Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
-	
-	\hint
-	
-	Find en anden løsning ($p=1$)
-	\[
-	\theta_z \cdot 4 = \frac{7\pi}{4}  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_z = \frac{15 \pi}{16}
-	\]
-	
-	\hint
-	
-	Find en tredje løsning ($p=2$)
-	\[
-	\theta_z \cdot 4 = \frac{7\pi}{4}   + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_z = \frac{23 \pi}{16}
-	\]
-	
-	\hint
-	
-	Find en fjerde løsning ($p=3$). Bemærk at dette er den sidste løsning, idet de efterfølgende løsninger blot vil være gentagelser af de fire første. 
-	\[
-	\theta_z \cdot 4 = \frac{7\pi}{4}  + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_z = \frac{31 \pi}{16}
-	\]
-	
+
+Find alle løsninger til $z^4=2-2i$. 
+
+Arranger dem efter stigende argumenter.
+
+$z_1$ = \answerbox{8^{\frac{1}{8}} \cdot e^{i \frac{7\pi}{16}}}		
+
+$z_2$ = \answerbox{8^{\frac{1}{8}} \cdot e^{i \frac{15\pi}{16}}}		
+
+$z_3$ = \answerbox{8^{\frac{1}{8}} \cdot e^{i \frac{23\pi}{16}}}		
+
+$z_4$ = \answerbox{8^{\frac{1}{8}} \cdot e^{i \frac{31\pi}{16}}}
+
+
+\hint 
+
+Indtegn det komplekse tal i et argand diagram. 
+
+\hint 
+
+Ud fra argand diagrammet kan højresiden skrives på polær form
+\[
+z^4 = \sqrt{2^2+(-2)^2} \cdot e^{i \frac{7 \pi}{4}} = 8^{\frac{1}{2}} \cdot e^{i \frac{7 \pi}{4}} 
+\]
+
+
+\hint
+
+Skriv $z$ på polær form $z = r_z \cdot e^{i \theta_z}$
+\[
+\left(r_z \cdot e^{i \theta_z}\right)^4 = r_z^4 \cdot e^{i \theta_z \cdot 4} = 8^{\frac{1}{2}} \cdot e^{i \frac{7 \pi}{4}} 
+\]
+
+\hint 
+Match modulus og fase
+
+\[
+r_z^4 = 8^{\frac{1}{2}} \qquad \wedge \qquad e^{i \theta_z \cdot 4} = e^{i \frac{7 \pi}{4}} 
+\]
+
+\hint
+
+Bestem modulus
+\[
+r_z  =  \left(8^{\frac{1}{2}} \right)^{\frac{1}{4}} = 8^{\frac{1}{8}}
+\]
+
+\hint
+
+Bestem argumentet
+
+\[
+\theta_z \cdot 4 = \frac{7 \pi}{4} \qquad \Rightarrow \qquad  \theta_z = \frac{7\pi}{16}
+\]
+
+\hint
+
+Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
+
+\hint
+
+Find en anden løsning ($p=1$)
+\[
+\theta_z \cdot 4 = \frac{7\pi}{4}  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_z = \frac{15 \pi}{16}
+\]
+
+\hint
+
+Find en tredje løsning ($p=2$)
+\[
+\theta_z \cdot 4 = \frac{7\pi}{4}   + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_z = \frac{23 \pi}{16}
+\]
+
+\hint
+
+Find en fjerde løsning ($p=3$). 
+Bemærk at dette er den sidste løsning, idet de efterfølgende 
+løsninger blot vil være gentagelser af de fire første. 
+\[
+\theta_z \cdot 4 = \frac{7\pi}{4}  + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_z = \frac{31 \pi}{16}
+\]
+
 \end{exercise}
 
 \newpage
 
 \begin{exercise}{De Moivres formel 1-10}
-	
-	Find alle løsninger til $z^3=1+i$. \\
-	Arranger dem efter stigende argumenter.
-	
-	$z_1$ = \answerbox{2^{\frac{1}{6}} \cdot e^{i \frac{\pi}{12}}}		$z_2$ = \answerbox{2^{\frac{1}{6}} \cdot e^{i \frac{3\pi}{4}}}		$z_3$ = \answerbox{2^{\frac{1}{6}} \cdot e^{i \frac{17\pi}{12}}}	
-	
-	
-	\hint 
-	
-	Indtegn det komplekse tal i et argand diagram. 
-	
-	\hint 
-	
-	Ud fra argand diagrammet kan højresiden skrives på polær form
-	\[
-	z^3 = \sqrt{(1)^2+(1)^2} \cdot e^{i \frac{\pi}{4}} = 2^{\frac{1}{2}} \cdot e^{i \frac{\pi}{4}} 
-	\]
-	
-	
-	\hint
-	
-	Skriv $z$ på polær form $z = r_z \cdot e^{i \theta_z}$
-	\[
-	\left(r_z \cdot e^{i \theta_z}\right)^3 = r_z^3 \cdot e^{i \theta_z \cdot 3} = 2^{\frac{1}{2}} \cdot e^{i \frac{ \pi}{4}} 
-	\]
-	
-	\hint 
-	Match modulus og fase
-	
-	\[
-	r_z^3 = 2^{\frac{1}{2}} \qquad \wedge \qquad e^{i \theta_z \cdot 3} = e^{i \frac{\pi}{4}} 
-	\]
-	
-	\hint
-	
-	Bestem modulus
-	\[
-	r_z  =  \left(2^{\frac{1}{2}} \right)^{\frac{1}{3}} = 2^{\frac{1}{6}}
-	\]
-	
-	\hint
-	
-	Bestem argumentet
-	
-	\[
-	\theta_z \cdot 3 = \frac{\pi}{4} \qquad \Rightarrow \qquad  \theta_z = \frac{\pi}{12}
-	\]
-	
-	\hint
-	
-	Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
-	
-	\hint
-	
-	Find en anden løsning ($p=1$)
-	\[
-	\theta_z \cdot 3 = \frac{\pi}{4}  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_z = \frac{9 \pi}{12} = \frac{3\pi}{4}
-	\]
-	
-	\hint
-	
-	Find en tredje løsning ($p=2$). Bemærk at dette er den sidste løsning, idet de efterfølgende løsninger blot vil være gentagelser af de forrige.
-	\[
-	\theta_z \cdot 3 = \frac{\pi}{4}  + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_z = \frac{17 \pi}{12}
-	\]
-	
+
+Find alle løsninger til $z^3=1+i$. 
+
+Arranger dem efter stigende argumenter.
+
+$z_1$ = \answerbox{2^{\frac{1}{6}} \cdot e^{i \frac{\pi}{12}}}		
+
+$z_2$ = \answerbox{2^{\frac{1}{6}} \cdot e^{i \frac{3\pi}{4}}}		
+
+$z_3$ = \answerbox{2^{\frac{1}{6}} \cdot e^{i \frac{17\pi}{12}}}	
+
+
+\hint 
+
+Indtegn det komplekse tal i et argand diagram. 
+
+\hint 
+
+Ud fra argand diagrammet kan højresiden skrives på polær form
+\[
+z^3 = \sqrt{(1)^2+(1)^2} \cdot e^{i \frac{\pi}{4}} = 2^{\frac{1}{2}} \cdot e^{i \frac{\pi}{4}} 
+\]
+
+
+\hint
+
+Skriv $z$ på polær form $z = r_z \cdot e^{i \theta_z}$
+\[
+\left(r_z \cdot e^{i \theta_z}\right)^3 = r_z^3 \cdot e^{i \theta_z \cdot 3} = 2^{\frac{1}{2}} \cdot e^{i \frac{ \pi}{4}} 
+\]
+
+\hint 
+Match modulus og fase
+
+\[
+r_z^3 = 2^{\frac{1}{2}} \qquad \wedge \qquad e^{i \theta_z \cdot 3} = e^{i \frac{\pi}{4}} 
+\]
+
+\hint
+
+Bestem modulus
+\[
+r_z  =  \left(2^{\frac{1}{2}} \right)^{\frac{1}{3}} = 2^{\frac{1}{6}}
+\]
+
+\hint
+
+Bestem argumentet
+
+\[
+\theta_z \cdot 3 = \frac{\pi}{4} \qquad \Rightarrow \qquad  \theta_z = \frac{\pi}{12}
+\]
+
+\hint
+
+Bemærk at $e^{i \theta} = e^{i \theta + 2 \pi \cdot p}$, hvor $p$ er et helt tal.
+
+\hint
+
+Find en anden løsning ($p=1$)
+\[
+\theta_z \cdot 3 = \frac{\pi}{4}  + 2 \pi \cdot p \qquad \Rightarrow \qquad  \theta_z = \frac{9 \pi}{12} = \frac{3\pi}{4}
+\]
+
+\hint
+
+Find en tredje løsning ($p=2$). 
+Bemærk at dette er den sidste løsning, idet de efterfølgende 
+løsninger blot vil være gentagelser af de forrige.
+\[
+\theta_z \cdot 3 = \frac{\pi}{4}  + 2 \pi \cdot p \qquad \Rightarrow  \qquad  \theta_z = \frac{17 \pi}{12}
+\]
+
 
 \end{exercise}
 
