--- a/integration/04integrationbyparts.tex
+++ b/integration/04integrationbyparts.tex
@@ -4,35 +4,714 @@
 \begin{document}
 \tableofcontents
 
-\begin{exercise}{Integration af basis funktioner 1-1}
 
-Bestem det værdien af det ubestemte integrale
-\[
-I = \int x^2 dx
-\]
-og kald den ukendte konstant for $K$.
 
-$I$ = \answerbox{\frac{1}{3} x^3 + K} \\
-
-\hint
-At integrere er det modsatte af at differentiere.
-
-\hint
-Vi skal altså finde en funktion $f(x)$, hvor der gælder at
-\[
-f'(x) = x^2
-\]
-
-\hint
-Et polynomie differentieres efter formlen:
-\[
-\frac{d}{dx} x^n = n \cdot x^{n - 1}
-\]
-
-\hint
-Løsningen er $f(x) = \frac{1}{3} x^3 + K$.
-
+\begin{exercise}{Partiel integration 1-1}
+	
+	
+	Bestem værdien af det ubestemte integrale
+	\[
+	\int e^x \cdot x \, dx
+	\]
+	og kald den ukendte integrationskonstant for A.
+	
+	\answerbox{e^x(x - 1)  + A} \\
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	\int u(x) \cdot v'(x) \, dx
+	\]
+	
+	\hint
+	
+	Benyt partiel integration
+	
+	\hint
+	\[
+	\int u(x) \cdot v'(x)\, dx = u(x) \cdot v(x) - \int u'(x) \cdot v(x) \, dx
+	\]
+	\hint
+	
+	Sæt $u(x) = x$ og $v'(x) = e^x$.
+	
+	
+	\hint
+	
+	Differentier $u(x)$ og integrer $v'(x)$.
+	
+	\hint
+	\[
+	\frac{d}{dx}x = 1 \qquad \wedge \qquad \int e^x \, dx = e^x
+	\]
+	
+	\hint
+	
+	Indsæt de fundne størrelser i formlen for partiel integration
+	\[
+	= x \cdot e^x - \int 1 \cdot e^x \, dx
+	\]
+	
+	\hint
+	
+	Bestem integralet
+	\[
+	\int e^x \, dx = e^x + C_1
+	\]
+	
+	\hint
+	Indsæt i løsningen 
+	
+	\hint
+	
+	\[
+	= x \cdot e^x - e^x + C_1
+	\]
+	
+	\hint
+	
+	Forenkl udtrykket og omdøb konstanten til A.
+	
+	\hint
+	
+	\[
+	= e^x(x - 1)  + A
+	\]
+	
+	
 \end{exercise}
+
+\newpage
+
+\begin{exercise}{Partiel integration 1-2}
+	
+	
+	Bestem integralet
+	\[
+	\int \sin(x) \cdot x^2 \, dx
+	\]
+	og kald den ukendte integrationskonstant for A.
+	
+	\answerbox{-x^2 \cdot \cos(x) + 2x \cdot \sin(x) - 2\cos(x) + A} \\
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	\int u(x) \cdot v'(x) \, dx
+	\]
+	
+	\hint
+	
+	Benyt partiel integration
+	
+	\hint
+	\[
+	\int u(x) \cdot v'(x)\, dx = u(x) \cdot v(x) - \int u'(x) \cdot v(x) \, dx
+	\]
+	\hint
+	
+	Sæt $u(x) = x^2$ og $v'(x) = \sin(x)$.
+	
+	
+	\hint
+	
+	Differentier $u(x)$ og integrer $v'(x)$.
+	
+	\hint
+	\[
+	\frac{d}{dx}x^2 = 2x \qquad \wedge \qquad \int \sin(x) \, dx = -\cos(x)
+	\]
+	
+	\hint
+	
+	Indsæt de fundne størrelser i formlen for partiel integration
+	\[
+	= x^2 \cdot (-\cos(x)) - \int 2x \cdot (-\cos(x)) \, dx = -x^2 \cdot \cos(x) + \int 2x \cdot \cos(x) \, dx 
+	\]
+	
+	\hint
+	
+	Vi benytter igen partiel integration til at løse integralet.
+	
+	\hint
+	
+	Sæt $u(x) = 2x$ og $v'(x) = \cos(x)$.
+	
+	
+	\hint
+	
+	Differentier $u(x)$ og integrer $v'(x)$.
+	
+	\hint
+	\[
+	\frac{d}{dx}2x = 2 \qquad \wedge \qquad \int \cos(x) \, dx = \sin(x)
+	\]
+	
+	\hint
+	
+	Indsæt de fundne størrelser i formlen for partiel integration
+	\[
+	= -x^2 \cdot \cos(x) + \left[ 2x \cdot \sin(x) - \int 2 \cdot \sin(x) \, dx \right]
+	\]
+	
+	\hint
+	Løs integralet
+	\[
+	2 \int \sin(x) \, dx = 2 (-\cos(x) + C_1) = -2\cos(x) + C_2
+	\]
+	
+	\hint
+	Indsæt i løsningen 
+	
+	\hint
+	
+	\[
+	= -x^2 \cdot \cos(x) + \left[ 2x \cdot \sin(x) - 2\cos(x) + C_2 \right]
+	\]
+	
+	\hint
+	
+	Forenkl udtrykket og omdøb konstanten til A.
+	
+	\hint
+	
+	\[
+	= -x^2 \cdot \cos(x) + 2x \cdot \sin(x) - 2\cos(x) + A
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Partiel integration 1-3}
+	
+	
+	Bestem værdien af det ubestemte integrale
+	\[
+	\int \cos(2x) \cdot x^2 \, dx
+	\]
+	og kald den ukendte integrationskonstant for A.
+	
+	\answerbox{\frac{2x^2 \cdot \sin(2x)+2x\cdot \cos(2x) -  \sin(2x)}{4} +  A} \\
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	\int u(x) \cdot v'(x) \, dx
+	\]
+	
+	\hint
+	
+	Benyt partiel integration
+	
+	\hint
+	\[
+	\int u(x) \cdot v'(x)\, dx = u(x) \cdot v(x) - \int u'(x) \cdot v(x) \, dx
+	\]
+	\hint
+	
+	Sæt $u(x) = x^2$ og $v'(x) = \cos(2x)$.
+	
+	
+	\hint
+	
+	Differentier $u(x)$ og integrer $v'(x)$.
+	
+	\hint
+	\[
+	\frac{d}{dx}x^2 = 2x \qquad \wedge \qquad \int \cos(2x) \, dx = \frac{\sin(2x)}{2}
+	\]
+	
+	\hint
+	
+	Indsæt de fundne størrelser i formlen for partiel integration
+	\[
+	= x^2 \cdot  \frac{\sin(2x)}{2} - \int 2x \cdot  \frac{\sin(2x)}{2} \, dx = \frac{x^2 \cdot \sin(2x)}{2} - \int x \cdot \sin(2x) \, dx 
+	\]
+	
+	\hint
+	
+	Vi benytter igen partiel integration til at løse integralet.
+	
+	\hint
+	
+	Sæt $u(x) = x$ og $v'(x) = \sin(2x)$.
+	
+	
+	\hint
+	
+	Differentier $u(x)$ og integrer $v'(x)$.
+	
+	\hint
+	\[
+	\frac{d}{dx}x = 1 \qquad \wedge \qquad \int \sin(2x) \, dx = \frac{-\cos(2x)}{2}
+	\]
+	
+	\hint
+	
+	Indsæt de fundne størrelser i formlen for partiel integration
+	\begin{align*}
+	&= \frac{x^2 \cdot \sin(2x)}{2} - \left[ x \cdot \frac{-\cos(2x)}{2} - \int 1 \cdot \frac{-\cos(2x)}{2} \, dx \right] \\
+	&= \frac{x^2 \cdot \sin(2x)}{2} +  \frac{x \cdot \cos(2x)}{2} -  \frac{1}{2}\int \cos(2x)\, dx
+	\end{align*}
+	
+	\hint
+	Løs integralet
+	\[
+	\frac{1}{2} \int \cos(2x) \, dx = \frac{1}{2} \left(\frac{\sin(2x)}{2} + C_1\right) = \frac{\sin(2x)}{4} + C_2
+	\]
+	
+	\hint
+	Indsæt i løsningen 
+	
+	\hint
+	
+	\[
+	= \frac{x^2 \cdot \sin(2x)}{2} +  \frac{x \cdot \cos(2x)}{2} - \frac{\sin(2x)}{4} + C_2
+	\]
+	
+	\hint
+	
+	Forenkl udtrykket og omdøb konstanten til A.
+	
+	\hint
+	
+	\[
+	=  \frac{2x^2 \cdot \sin(2x)+2x\cdot \cos(2x) -  \sin(2x)}{4} +  A
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Partiel integration 1-4}
+	
+	
+	Bestem integralet
+	\[
+	\int \cos(x) \cdot 2x \, dx
+	\]
+	og kald den ukendte integrationskonstant for A.
+	
+	\answerbox{2x \cdot \sin(x) + 2 \cos(x) + A} \\
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	\int u(x) \cdot v'(x) \, dx
+	\]
+	
+	\hint
+	
+	Benyt partiel integration
+	
+	\hint
+	\[
+	\int u(x) \cdot v'(x)\, dx = u(x) \cdot v(x) - \int u'(x) \cdot v(x) \, dx
+	\]
+	\hint
+	
+	Sæt $u(x) = 2x$ og $v'(x) = \cos(x)$.
+	
+	
+	\hint
+	
+	Differentier $u(x)$ og integrer $v'(x)$.
+	
+	\hint
+	\[
+	\frac{d}{dx}2x = 2 \qquad \wedge \qquad \int \cos(x) \, dx = \sin(x)
+	\]
+	
+	\hint
+	
+	Indsæt de fundne størrelser i formlen for partiel integration
+	\[
+	= 2x \cdot \sin(x) - \int 2 \cdot \sin(x) \, dx
+	\]
+	
+	\hint
+	
+	Bestem integralet
+	\[
+	2 \int \sin(x) \, dx = 2 \cdot (-\cos(x) + C_1) = -2 \cos(x) + C_2
+	\]
+	
+	\hint
+	Indsæt i løsningen 
+	
+	\hint
+	
+	\[
+	= 2x \cdot \sin(x) -(-2 \cos(x) + C_2)
+	\]
+	
+	\hint
+	
+	Forenkl udtrykket og omdøb konstanten til A.
+	
+	\hint
+	
+	\[
+	= 2x \cdot \sin(x) + 2 \cos(x) + A
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Partiel integration 1-5}
+	
+	
+	Bestem integralet
+	\[
+	\int \sin(x) \cdot x \, dx
+	\]
+	og kald den ukendte integrationskonstant for A.
+	
+	\answerbox{-x \cdot \cos(x) + \sin(x) + A} \\
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	\int u(x) \cdot v'(x) \, dx
+	\]
+	
+	\hint
+	
+	Benyt partiel integration
+	
+	\hint
+	\[
+	\int u(x) \cdot v'(x)\, dx = u(x) \cdot v(x) - \int u'(x) \cdot v(x) \, dx
+	\]
+	\hint
+	
+	Sæt $u(x) = x$ og $v'(x) = \sin(x)$.
+	
+	
+	\hint
+	
+	Differentier $u(x)$ og integrer $v'(x)$.
+	
+	\hint
+	\[
+	\frac{d}{dx}x = 1 \qquad \wedge \qquad \int \sin(x) \, dx = -\cos(x)
+	\]
+	
+	\hint
+	
+	Indsæt de fundne størrelser i formlen for partiel integration
+	\begin{align*}
+	&= x \cdot (-\cos(x))- \int 1 \cdot (-\cos(x)) \, dx\\ 
+	&= -x \cdot \cos(x)+ \int \cos(x) \, dx 
+	\end{align*}
+	
+	\hint
+	
+	Bestem integralet
+	\[
+	\int \cos(x) \, dx = \sin(x) + C_1
+	\]
+	
+	\hint
+	Indsæt i løsningen 
+	
+	\hint
+	
+	\[
+	= -x \cdot \cos(x) + \sin(x) + C_1
+	\]
+	
+	\hint
+	
+	Omdøb konstanten til A.
+	
+	\hint
+	
+	\[
+	= -x \cdot \cos(x) + \sin(x) + A
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Partiel integration 1-6}
+	
+	
+	Bestem integralet
+	\[
+	\int \ln(x) \cdot x^2 \, dx
+	\]
+	og kald den ukendte integrationskonstant for A.
+	
+	\answerbox{ \frac{3\ln(x) \cdot x^3 - x^3}{9}  + A} \\
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	\int u(x) \cdot v'(x) \, dx
+	\]
+	
+	\hint
+	
+	Benyt partiel integration
+	
+	\hint
+	\[
+	\int u(x) \cdot v'(x)\, dx = u(x) \cdot v(x) - \int u'(x) \cdot v(x) \, dx
+	\]
+	\hint
+	
+	Sæt $u(x) = \ln(x)$ og $v'(x) = x^2$.
+	
+	
+	\hint
+	
+	Differentier $u(x)$ og integrer $v'(x)$.
+	
+	\hint
+	\[
+	\frac{d}{dx}\ln(x)= \frac{1}{x} \qquad \wedge \qquad \int x^2 \, dx = \frac{1}{3}x^3
+	\]
+	
+	\hint
+	
+	Indsæt de fundne størrelser i formlen for partiel integration
+	\begin{align*}
+	=& \ln(x) \cdot \frac{1}{3}x^3 - \int \frac{1}{x} \cdot \frac{1}{3}x^3 \, dx\\
+	=& \frac{\ln(x) \cdot x^3}{3} - \frac{1}{3} \int x^2 \, dx
+	\end{align*}
+	
+	\hint
+	
+	Bestem integralet
+	\[
+	\frac{1}{3} \int x^2 \, dx = \frac{1}{3} \cdot \left( \frac{1}{3}x^3 + C_1 \right)= \frac{1}{9}x^3 + C_2
+	\]
+	
+	\hint
+	Indsæt i løsningen 
+	
+	\hint
+	
+	\[
+	= \frac{\ln(x) \cdot x^3}{3} - \frac{1}{9}x^3 + C_2
+	\]
+	
+	\hint
+	
+	Forenkl udtrykket og omdøb konstanten til A.
+	
+	\hint
+	
+	\[
+	= \frac{3\ln(x) \cdot x^3 - x^3}{9}  + A
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Partiel integration 1-7}
+	
+	
+	Bestem integralet
+	\[
+	\int \ln(x) \cdot x \, dx
+	\]
+	og kald den ukendte integrationskonstant for A.
+	
+	\answerbox{x^2 \left( \frac{\ln(x)}{2} - \frac{1}{4}   \right) + A} \\
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	\int u(x) \cdot v'(x) \, dx
+	\]
+	
+	\hint
+	
+	Benyt partiel integration
+	
+	\hint
+	\[
+	\int u(x) \cdot v'(x)\, dx = u(x) \cdot v(x) - \int u'(x) \cdot v(x) \, dx
+	\]
+	\hint
+	
+	Sæt $u(x) = \ln(x)$ og $v'(x) = x$.
+	
+	
+	\hint
+	
+	Differentier $u(x)$ og integrer $v'(x)$.
+	
+	\hint
+	\[
+	\frac{d}{dx}\ln(x) = \frac{1}{x} \qquad \wedge \qquad \int x \, dx = \frac{1 }{2}x^2
+	\]
+	
+	\hint
+	
+	Indsæt de fundne størrelser i formlen for partiel integration
+	\begin{align*}
+	=& \ln(x) \cdot \frac{1}{2}x^2 - \int \frac{1}{x} \cdot \frac{1}{2}x^2 \, dx \\
+	=& \frac{\ln(x) \cdot x^2}{2} - \frac{1}{2}\int x \, dx 
+	\end{align*}
+	
+	\hint
+	
+	Bestem integralet
+	\[
+	\frac{1}{2}\int x \, dx = \frac{1}{2} \left( \frac{1}{2}x^2 + C_1 \right) = \frac{1}{4}x^2 + C_2
+	\]
+	
+	\hint
+	Indsæt i løsningen 
+	
+	\hint
+	
+	\[
+	= \frac{\ln(x) \cdot x^2}{2} - \frac{1}{4}x^2 + C_2
+	\]
+	
+	\hint
+	
+	Forenkl udtrykket og omdøb konstanten til A.
+	
+	\hint
+	
+	\[
+	= x^2 \left( \frac{\ln(x)}{2} - \frac{1}{4}   \right) + A
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Partiel integration 1-8}
+	
+	
+	Bestem værdien af det ubestemte integrale
+	\[
+	\int e^{2x} \cdot x^2 \, dx
+	\]
+	og kald den ukendte integrationskonstant for A.
+	
+	\answerbox{e^{2x} \cdot \left( \frac{2x^2-2x+1}{4}  \right) + A} \\
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	\int u(x) \cdot v'(x) \, dx
+	\]
+	
+	\hint
+	
+	Benyt partiel integration
+	
+	\hint
+	\[
+	\int u(x) \cdot v'(x)\, dx = u(x) \cdot v(x) - \int u'(x) \cdot v(x) \, dx
+	\]
+	\hint
+	
+	Sæt $u(x) = x^2$ og $v'(x) = e^{2x}$.
+	
+	
+	\hint
+	
+	Differentier $u(x)$ og integrer $v'(x)$.
+	
+	\hint
+	\[
+	\frac{d}{dx}x^2 = 2x \qquad \wedge \qquad \int e^{2x} \, dx = \frac{e^{2x}}{2}
+	\]
+	
+	\hint
+	
+	Indsæt de fundne størrelser i formlen for partiel integration
+	\[
+	= x^2 \cdot  \frac{e^{2x}}{2} - \int 2x \cdot  \frac{e^{2x}}{2} \, dx = \frac{x^2 \cdot e^{2x}}{2} - \int x \cdot e^{2x} \, dx 
+	\]
+	
+	\hint
+	
+	Vi benytter igen partiel integration til at løse integralet.
+	
+	\hint
+	
+	Sæt $u(x) = x$ og $v'(x) = e^{2x}$.
+	
+	
+	\hint
+	
+	Differentier $u(x)$ og integrer $v'(x)$.
+	
+	\hint
+	\[
+	\frac{d}{dx}x = 1 \qquad \wedge \qquad \int e^{2x} \, dx = \frac{e^{2x}}{2}
+	\]
+	
+	\hint
+	
+	Indsæt de fundne størrelser i formlen for partiel integration
+	\[
+	= \frac{x^2 \cdot e^{2x}}{2} - \left[ x \cdot \frac{e^{2x}}{2} - \int 1 \cdot \frac{e^{2x}}{2} \, dx \right]
+	\]
+	
+	\hint
+	Løs integralet
+	\[
+	\frac{1}{2} \int e^{2x} \, dx = \frac{1}{2} \left(\frac{e^{2x}}{2} + C_1\right) = \frac{e^{2x}}{4} + C_2
+	\]
+	
+	\hint
+	Indsæt i løsningen 
+	
+	\hint
+	
+	\[
+	= \frac{x^2 \cdot e^{2x}}{2} -x \cdot \frac{e^{2x}}{2} + \frac{e^{2x}}{4} + C_2
+	\]
+	
+	\hint
+	
+	Forenkl udtrykket og omdøb konstanten til A.
+	
+	\hint
+	
+	\[
+	=  e^{2x} \cdot \left( \frac{2x^2-2x+1}{4}  \right) + A
+	\]
+	
+	
+\end{exercise}
+
 
 
 
