Tilføjede opgaver med substitution med grænser

--- a/integration/03integrationusingsubstitutionwithlimits.tex
+++ b/integration/03integrationusingsubstitutionwithlimits.tex
@@ -4,36 +4,513 @@
 \begin{document}
 \tableofcontents
 
-\begin{exercise}{Integration af basis funktioner 1-1}
+\begin{exercise}{Integration ved substitution med grænser 1-1}
+	
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	M = \int_0^2 e^{(x^2)} \cdot x \, dx
+	\]
+	
+	$M$ = \answerbox{\frac{1}{2}e^4-\frac{1}{2}} \\
+	
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	f'(g(x)) \cdot g'(x)
+	\]
+	
+	\hint
+	
+	Benyt substitutionsmetoden
+	
+	\hint
+	
+	Sæt $u=x^2$.
+	
+	
+	\hint
+	
+	Differentier $u$ mht. $x$.
+	\[
+	\frac{du}{dx} = 2x \qquad	\Rightarrow \qquad dx = \frac{du}{2x}
+	\]
+	
+	\hint
+	
+	Indsæt $dx$ og $u$ i integralet og husk at ændre grænserne.
+	\[
+	\int_{u(0)=0}^{u(2)=4} e^{u} \cdot \frac{x}{2x} \, du = \frac{1}{2} \int_{0}^{4} e^u \, du
+	\]
+	
 
-Bestem det værdien af det ubestemte integrale
-\[
-I = \int x^2 dx
-\]
-og kald den ukendte konstant for $K$.
-
-$I$ = \answerbox{\frac{1}{3} x^3 + K} \\
-
-\hint
-At integrere er det modsatte af at differentiere.
-
-\hint
-Vi skal altså finde en funktion $f(x)$, hvor der gælder at
-\[
-f'(x) = x^2
-\]
-
-\hint
-Et polynomie differentieres efter formlen:
-\[
-\frac{d}{dx} x^n = n \cdot x^{n - 1}
-\]
-
-\hint
-Løsningen er $f(x) = \frac{1}{3} x^3 + K$.
-
+	
+	\hint
+	
+	Bestem integralet
+	\[
+	= \frac{1}{2} \left[e^u\right]_0^4 = \frac{1}{2} \left(  e^4-e^0 \right)
+	\]
+	
+	\hint
+	Forenkl udtryk ved at gange ind i parentesen.
+	
+	\hint
+	
+	\[
+	= \frac{1}{2} \left(  e^4-1 \right) = \frac{1}{2} e^4 - \frac{1}{2}
+	\]
+	
+	
+	
 \end{exercise}
 
+\newpage
+
+\begin{exercise}{Integration ved substitution med grænser 1-2}
+	
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	M =	\int_{0}^{\sqrt{\pi}} \sin(x^2) \cdot x \, dx
+	\]
+	
+	$M$ =\answerbox{1} \\
+	
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	f'(g(x)) \cdot g'(x)
+	\]
+	
+	\hint
+	
+	Benyt substitutionsmetoden
+	
+	\hint
+	
+	Sæt $u=x^2$.
+	
+	
+	\hint
+	
+	Differentier $u$ mht. $x$.
+	\[
+	\frac{du}{dx} = 2x \qquad	\Rightarrow \qquad dx = \frac{du}{2x}
+	\]
+	
+	\hint
+	
+	Indsæt $dx$ og $u$ i integralet og husk at ændre grænserne
+	\[
+	\int_{u(0)=0}^{u(\sqrt{\pi})=\pi} \sin(u) \cdot \frac{x}{2x} \, du = \frac{1}{2} \int_0^\pi \sin(u) \, du
+	\]
+	
+	\hint
+	
+	Bestem integralet
+	\[
+	= \frac{1}{2} \left[-\cos(u) \right]_0^\pi = \frac{-1}{2} \left[\cos(\pi) -\cos(0) \right]
+	\]
+	
+	\hint
+	Forenkl udtryk ved at gange ind i parentesen.
+	
+	\hint
+	
+	\[
+	= \frac{-1}{2} \left[-1 - 1 \right] = \frac{-1}{2} \cdot (-2) = 1
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Integration ved substitution med grænser 1-3}
+	
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	M = \int_0^{\frac{\pi}{2}} e^{\sin(x)} \cdot cos(x) \, dx
+	\]
+
+	$M$ = \answerbox{e-1} \\
+	
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	f'(g(x)) \cdot g'(x)
+	\]
+	
+	\hint
+	
+	Benyt substitutionsmetoden
+	
+	\hint
+	
+	Sæt $u=\sin(x)$.
+	
+	
+	\hint
+	
+	Differentier $u$ mht. $x$.
+	\[
+	\frac{du}{dx} = \cos(x) \qquad	\Rightarrow \qquad dx = \frac{du}{\cos(x)}
+	\]
+	
+	\hint
+	
+	Indsæt $dx$ og $u$ i integralet og husk grænserne.
+	\[
+	\int_{u(0)=0}^{u(\frac{\pi}{2}) = 1} e^{u} \cdot \frac{\cos(x)}{\cos(x)} \, du = \int_0^1 e^u \, du
+	\]
+	
+	\hint
+	
+	Bestem integralet
+	\[
+	=  \left[e^u\right]_0^1 = e^1-e^0
+	\]
+	
+	\hint
+	
+	Forenkl udtryk
+	
+	\hint
+	
+	\[
+	= e - 1
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Integration ved substitution med grænser 1-4}
+	
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	M = \int_1^2 e^{(x^2+1)} \cdot x \, dx
+	\]
+
+	
+	$M$ = \answerbox{\frac{1}{2} e^5 - \frac{1}{2} e^2} \\
+	
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	f'(g(x)) \cdot g'(x)
+	\]
+	
+	\hint
+	
+	Benyt substitutionsmetoden
+	
+	\hint
+	
+	Sæt $u=x^2+1$.
+	
+	
+	\hint
+	
+	Differentier $u$ mht. $x$.
+	\[
+	\frac{du}{dx} = 2x \qquad	\Rightarrow \qquad dx = \frac{du}{2x}
+	\]
+	
+	\hint
+	
+	Indsæt $dx$ og $u$ i integralet og husk grænserne
+	\[
+	\int_{u(1)=2}^{u(2)=5} e^{u} \cdot \frac{x}{2x} \, du = \frac{1}{2} \int_2^5 e^u \, du
+	\]
+	
+	\hint
+	
+	Bestem integralet
+	\[
+	= \frac{1}{2} \left[ e^u \right]_2^5 = \frac{1}{2} \left[ e^5 - e^2  \right]
+	\]
+	
+	\hint
+	Forenkl udtryk ved at gange ind i parentesen.
+	
+	\hint
+	
+	\[
+	= \frac{1}{2} e^5 - \frac{1}{2} e^2
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Integration ved substitution med grænser 1-5}
+	
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	M = \int_0^2 \sin(3x^2+2) \cdot 2x \, dx
+	\]
+	
+	$M$ = \answerbox{- \frac{1}{3} \cos(14) + \frac{1}{3} \cos(2)} \\
+	
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	f'(g(x)) \cdot g'(x)
+	\]
+	
+	\hint
+	
+	Benyt substitutionsmetoden
+	
+	\hint
+	
+	Sæt $u=3x^2+2$.
+	
+	
+	\hint
+	
+	Differentier $u$ mht. $x$.
+	\[
+	\frac{du}{dx} = 6x \qquad	\Rightarrow \qquad dx = \frac{du}{6x}
+	\]
+	
+	\hint
+	
+	Indsæt $dx$ og $u$ i integralet og husk grænserne
+	\[
+	\int_{u(0)=0}^{u(2)} \sin(u) \cdot \frac{2x}{6x} \, du = \frac{1}{3} \int_2^{14} \sin(u) \, du
+	\]
+	
+	\hint
+	
+	Bestem integralet
+	\[
+	= \frac{1}{3} \left[ -\cos(u) \right]_2^{14} = - \frac{1}{3} \left[ \cos(14) - \cos(2) \right]
+	\]
+	
+	\hint
+	Forenkl udtryk ved at gange ind i parentesen.
+	
+	\hint
+	
+	\[
+	= - \frac{1}{3} \cos(14) + \frac{1}{3} \cos(2)
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Integration ved substitution med grænser 1-6}
+	
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	M = \int_0^1 (x+3)^3 \, dx
+	\]
+	
+	$M$ = \answerbox{\frac{175}{4}} \\
+	
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	f'(g(x)) \cdot g'(x)
+	\]
+	
+	\hint
+	
+	Benyt substitutionsmetoden
+	
+	\hint
+	
+	Sæt $u=x+3$.
+	
+	
+	\hint
+	
+	Differentier $u$ mht. $x$.
+	\[
+	\frac{du}{dx} = 1 \qquad	\Rightarrow \qquad dx = du
+	\]
+	
+	\hint
+	
+	Indsæt $dx$ og $u$ i integralet og husk grænserne
+	\[
+	\int_{u(0)=3}^{u(1)=4} u^3  \, du = 	\int_{3}^{4} u^3 \, du
+	\]
+	
+	\hint
+	
+	Bestem integralet
+	\[
+	= \frac{1}{4} \left[ u^4 \right] _3^4 = \frac{1}{4} \left[ 4^4-3^4  \right]
+	\]
+	
+	\hint
+	Forenkl udtryk ved at gange ind i parentesen.
+	
+	\hint
+	
+	\[
+	=  \frac{1}{4} \left[ 256-81 \right] = \frac{175}{4}
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Integration ved substitution med grænser 1-7}
+	
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	M = \int_0^{\frac{\pi}{2}} cos(1-x) \, dx
+	\]
+	
+	$M$ = \answerbox{\cos(1)+\sin(1)} \\
+	
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	f'(g(x)) \cdot g'(x)
+	\]
+	
+	\hint
+	
+	Benyt substitutionsmetoden
+	
+	\hint
+	
+	Sæt $u=1-x$.
+	
+	
+	\hint
+	
+	Differentier $u$ mht. $x$.
+	\[
+	\frac{du}{dx} = -1 \qquad	\Rightarrow \qquad dx = \frac{du}{-1}
+	\]
+	
+	\hint
+	
+	Indsæt $dx$ og $u$ i integralet og husk grænserne
+	\[
+	\int_{u(0)=1}^{u(\frac{\pi}{2})=1-\frac{\pi}{2}} -\cos(u) \, du =  (-1) \cdot \int_1^{1-\pi/2} \cos(u) \, du
+	\]
+	
+	\hint
+	
+	Bestem integralet
+	\[
+	= (-1) \cdot  \left[ \sin(u) \right]_1^{1-\frac{\pi}{2}} =  (-1) \cdot  \left[ \sin\left(1-\frac{\pi}{2}\right) - \sin(1) \right]
+	\]
+	
+	
+	\hint
+	
+	Gang ind i parentes og forenkl udtryk
+	
+	\hint
+	
+	\[
+	= -\sin\left(1-\frac{\pi}{2}\right) + \sin(1) = \cos(1) + \sin(1)
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Integration ved substitution med grænser 1-8}
+	
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	M = \int_0^{\sqrt{\frac{\pi}{4}}} \cos(2x^2) \cdot x \, dx
+	\]
+	
+	$M$ = \answerbox{\frac{1}{4}} \\
+	
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	f'(g(x)) \cdot g'(x)
+	\]
+	
+	\hint
+	
+	Benyt substitutionsmetoden
+	
+	\hint
+	
+	Sæt $u=2x^2$.
+	
+	
+	\hint
+	
+	Differentier $u$ mht. $x$.
+	\[
+	\frac{du}{dx} = 4x \qquad	\Rightarrow \qquad dx = \frac{du}{4x}
+	\]
+	
+	\hint
+	
+	Indsæt $dx$ og $u$ i integralet og husk grænserne
+	\[
+	 \int_{u(0)=0}^{u\left(\sqrt{\frac{\pi}{4}}\right) = \frac{\pi}{2}} \cos(u) \cdot \frac{x}{4x} \, du = \frac{1}{4} \int_0^{\frac{\pi}{2}} \cos(u) \, du
+	\]
+	
+	\hint
+	
+	Bestem integralet
+	\[
+	= \frac{1}{4} \left[ \sin(u) \right]_0^{\frac{\pi}{2}} =  \frac{1}{4} \left[ \sin\left(\frac{\pi}{2}\right) - \sin(0) \right]
+	\]
+	
+	\hint
+	Forenkl udtryk ved at gange ind i parentesen.
+	
+	\hint
+	
+	\[
+	= \frac{1}{4} \left[ 1 - 0 \right] = \frac{1}{4}
+	\]
+	
+	
+\end{exercise}
 
 
 \end{document}
